package coordinator

import (
	"context"
	"testing"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	ctxmgr "github.com/weisyn/v1/internal/core/ispc/context"
	"github.com/weisyn/v1/internal/core/ispc/hostabi"
	ispcInterfaces "github.com/weisyn/v1/internal/core/ispc/interfaces"
	"github.com/weisyn/v1/internal/core/ispc/testutil"
	"github.com/weisyn/v1/internal/core/ispc/zkproof"
	"google.golang.org/grpc"

	"github.com/weisyn/v1/pkg/interfaces/config"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
	"github.com/weisyn/v1/pkg/interfaces/tx"
	"github.com/weisyn/v1/pkg/types"
	core "github.com/weisyn/v1/pb/blockchain/block"
	utxo "github.com/weisyn/v1/pb/blockchain/utxo"
	ures "github.com/weisyn/v1/pkg/interfaces/ures"
	pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	pb_resource "github.com/weisyn/v1/pb/blockchain/block/transaction/resource"
)

// ============================================================================
// Manager æ ¸å¿ƒåŠŸèƒ½æµ‹è¯•
// ============================================================================
//
// ğŸ¯ **æµ‹è¯•ç›®çš„**ï¼šå‘ç°ä»£ç ç¼ºé™·å’ŒBUGï¼Œç¡®ä¿å®ç°æ­£ç¡®æ€§
//
// âœ… **é‡æ„è¯´æ˜**ï¼šä½¿ç”¨testutilåŒ…ä¸­çš„ç»Ÿä¸€Mockå¯¹è±¡ï¼Œéµå¾ªæµ‹è¯•è§„èŒƒ
//
// ============================================================================

// mockInternalEngineManager Mockçš„å¼•æ“ç®¡ç†å™¨
type mockInternalEngineManager struct{}

func (m *mockInternalEngineManager) ExecuteWASM(ctx context.Context, hash []byte, method string, params []uint64) ([]uint64, error) {
	return []uint64{1, 2, 3}, nil
}

func (m *mockInternalEngineManager) ExecuteONNX(ctx context.Context, hash []byte, tensorInputs []ispcInterfaces.TensorInput) ([]ispcInterfaces.TensorOutput, error) {
	// ç®€åŒ–çš„Mockå®ç°ï¼šè¿”å›ä¸€ä¸ªå›ºå®šçš„å¼ é‡è¾“å‡º
	return []ispcInterfaces.TensorOutput{
		{
			Name:    "output_0",
			DType:   "float64",
			Shape:   []int64{2},
			Layout:  "",
			Values:  []float64{1.0, 2.0},
			RawData: nil,
		},
	}, nil
}

func (m *mockInternalEngineManager) Shutdown(ctx context.Context) error {
	return nil
}

// createTestManager åˆ›å»ºæµ‹è¯•ç”¨çš„Manager
//
// âœ… **é‡æ„è¯´æ˜**ï¼šä½¿ç”¨testutilåŒ…ä¸­çš„ç»Ÿä¸€Mockå¯¹è±¡ï¼Œéµå¾ªæµ‹è¯•è§„èŒƒ
func createTestManager(t *testing.T) *Manager {
	logger := testutil.NewTestLogger()
	configProvider := testutil.NewTestConfigProvider()
	clock := testutil.NewTestClock()

	// åˆ›å»ºcontextManager
	contextManager := ctxmgr.NewManager(logger, configProvider, clock)

	// åˆ›å»ºzkproofManager
	hashManager := testutil.NewTestHashManager()
	signatureManager := testutil.NewTestSignatureManager()
	zkproofManager := zkproof.NewManager(hashManager, signatureManager, logger, configProvider)

	// åˆ›å»ºhostProviderï¼ˆéœ€è¦Mockæ‰€æœ‰ä¾èµ–ï¼‰
	hostProvider := createMockHostProvider(t, logger)

	// åˆ›å»ºengineManager
	engineManager := &mockInternalEngineManager{}

	return NewManager(
		engineManager,
		contextManager,
		zkproofManager,
		hostProvider,
		logger,
		configProvider,
	)
}

// TestNewManager æµ‹è¯•åˆ›å»ºManager
func TestNewManager(t *testing.T) {
	logger := testutil.NewTestLogger()
	configProvider := testutil.NewTestConfigProvider()
	clock := testutil.NewTestClock()

	// åˆ›å»ºä¾èµ–
	contextManager := ctxmgr.NewManager(logger, configProvider, clock)
	hashManager := testutil.NewTestHashManager()
	signatureManager := testutil.NewTestSignatureManager()
	zkproofManager := zkproof.NewManager(hashManager, signatureManager, logger, configProvider)
	hostProvider := createMockHostProvider(t, logger)
	engineManager := &mockInternalEngineManager{}

	// åˆ›å»ºManager
	manager := NewManager(
		engineManager,
		contextManager,
		zkproofManager,
		hostProvider,
		logger,
		configProvider,
	)

	// éªŒè¯Managerå·²æ­£ç¡®åˆ›å»º
	require.NotNil(t, manager)
	assert.NotNil(t, manager.engineManager)
	assert.NotNil(t, manager.contextManager)
	assert.NotNil(t, manager.zkproofManager)
	assert.NotNil(t, manager.hostProvider)
	assert.NotNil(t, manager.logger)
	assert.NotNil(t, manager.configProvider)
	assert.False(t, manager.asyncZKProofEnabled, "å¼‚æ­¥ZKè¯æ˜åº”è¯¥é»˜è®¤ç¦ç”¨")
	assert.NotNil(t, manager.zkProofTaskStore, "ä»»åŠ¡å­˜å‚¨åº”è¯¥å·²åˆå§‹åŒ–")
}

// TestNewManager_NilDependencies æµ‹è¯•åˆ›å»ºManageræ—¶nilä¾èµ–çš„å¤„ç†
// ğŸ› **BUGæ£€æµ‹**ï¼šæµ‹è¯•nilä¾èµ–æ˜¯å¦ä¼šå¯¼è‡´panicæˆ–é”™è¯¯
func TestNewManager_NilDependencies(t *testing.T) {
	logger := testutil.NewTestLogger()
	configProvider := testutil.NewTestConfigProvider()
	clock := testutil.NewTestClock()

	contextManager := ctxmgr.NewManager(logger, configProvider, clock)
	hashManager := testutil.NewTestHashManager()
	signatureManager := testutil.NewTestSignatureManager()
	zkproofManager := zkproof.NewManager(hashManager, signatureManager, logger, configProvider)
	hostProvider := createMockHostProvider(t, logger)
	engineManager := &mockInternalEngineManager{}

	// âš ï¸ **BUGæ£€æµ‹**ï¼šæµ‹è¯•nilä¾èµ–
	// æ³¨æ„ï¼šNewManagerä¸æ£€æŸ¥nilï¼Œè¿™å¯èƒ½æ˜¯è®¾è®¡å†³ç­–ï¼Œä½†åº”è¯¥æµ‹è¯•
	tests := []struct {
		name           string
		engineManager  ispcInterfaces.InternalEngineManager
		contextManager *ctxmgr.Manager
		zkproofManager *zkproof.Manager
		hostProvider   *hostabi.HostFunctionProvider
		logger         interface{}
		configProvider interface{}
		expectPanic    bool
	}{
		{
			name:           "nil engineManager",
			engineManager:  nil,
			contextManager: contextManager,
			zkproofManager: zkproofManager,
			hostProvider:   hostProvider,
			logger:         logger,
			configProvider: configProvider,
			expectPanic:    false, // NewManagerä¸æ£€æŸ¥nil
		},
		{
			name:           "nil contextManager",
			engineManager:  engineManager,
			contextManager: nil,
			zkproofManager: zkproofManager,
			hostProvider:   hostProvider,
			logger:         logger,
			configProvider: configProvider,
			expectPanic:    false, // NewManagerä¸æ£€æŸ¥nil
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			if tt.expectPanic {
				assert.Panics(t, func() {
					loggerVal, _ := tt.logger.(log.Logger)
					configVal, _ := tt.configProvider.(config.Provider)
					_ = loggerVal
					_ = configVal
					NewManager(
						tt.engineManager,
						tt.contextManager,
						tt.zkproofManager,
						tt.hostProvider,
						loggerVal,
						configVal,
					)
				}, "åº”è¯¥panic")
			} else {
				// ä¸panicï¼Œä½†å¯èƒ½åˆ›å»ºäº†æ— æ•ˆçš„Manager
				loggerVal, _ := tt.logger.(log.Logger)
				configVal, _ := tt.configProvider.(config.Provider)
				manager := NewManager(
					tt.engineManager,
					tt.contextManager,
					tt.zkproofManager,
					tt.hostProvider,
					loggerVal,
					configVal,
				)
				// âš ï¸ **æ½œåœ¨BUG**ï¼šå¦‚æœä¾èµ–ä¸ºnilï¼Œåç»­è°ƒç”¨å¯èƒ½panic
				if manager != nil {
					t.Logf("âš ï¸ è­¦å‘Šï¼šManagerå·²åˆ›å»ºï¼Œä½†ä¾èµ–ä¸ºnilï¼Œåç»­è°ƒç”¨å¯èƒ½å¤±è´¥")
				}
			}
		})
	}
}

// TestManager_SetRuntimeDependencies æµ‹è¯•è¿è¡Œæ—¶ä¾èµ–æ³¨å…¥
func TestManager_SetRuntimeDependencies(t *testing.T) {
	manager := createTestManager(t)

	// âš ï¸ **BUGæ£€æµ‹**ï¼šæµ‹è¯•nilä¾èµ–çš„å¤„ç†
	tests := []struct {
		name         string
		queryService interface{}
		uresCAS      interface{}
		draftSvc     interface{}
		hashMgr      interface{}
		expectError  bool
		errorMsg     string
	}{
		{
			name:         "all nil",
			queryService: nil,
			uresCAS:      nil,
			draftSvc:     nil,
			hashMgr:      nil,
			expectError:  true,
			errorMsg:     "queryService cannot be nil",
		},
		{
			name:         "nil queryService",
			queryService: nil,
			uresCAS:      &mockCASStorage{},
			draftSvc:     &mockDraftService{},
			hashMgr:      testutil.NewTestHashManager(),
			expectError:  true,
			errorMsg:     "queryService cannot be nil",
		},
		{
			name:         "nil uresCAS",
			queryService: &mockQueryService{},
			uresCAS:      nil,
			draftSvc:     &mockDraftService{},
			hashMgr:      testutil.NewTestHashManager(),
			expectError:  true,
			errorMsg:     "uresCAS cannot be nil",
		},
		{
			name:         "nil draftService",
			queryService: &mockQueryService{},
			uresCAS:      &mockCASStorage{},
			draftSvc:     nil,
			hashMgr:      testutil.NewTestHashManager(),
			expectError:  true,
			errorMsg:     "draftService cannot be nil",
		},
		{
			name:         "nil hashManager",
			queryService: &mockQueryService{},
			uresCAS:      &mockCASStorage{},
			draftSvc:     &mockDraftService{},
			hashMgr:      nil,
			expectError:  true,
			errorMsg:     "hashManager cannot be nil",
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			var queryService persistence.QueryService
			var uresCAS ures.CASStorage
			var draftSvc tx.TransactionDraftService
			var hashMgr crypto.HashManager
			
			if qs, ok := tt.queryService.(persistence.QueryService); ok {
				queryService = qs
			}
			if uc, ok := tt.uresCAS.(ures.CASStorage); ok {
				uresCAS = uc
			}
			if ds, ok := tt.draftSvc.(tx.TransactionDraftService); ok {
				draftSvc = ds
			}
			if hm, ok := tt.hashMgr.(crypto.HashManager); ok {
				hashMgr = hm
			}
			
			err := manager.SetRuntimeDependencies(
				queryService,
				uresCAS,
				draftSvc,
				hashMgr,
			)

			if tt.expectError {
				assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
				if tt.errorMsg != "" {
					assert.Contains(t, err.Error(), tt.errorMsg, "é”™è¯¯ä¿¡æ¯åº”è¯¥åŒ…å«é¢„æœŸå†…å®¹")
				}
			} else {
				assert.NoError(t, err, "ä¸åº”è¯¥è¿”å›é”™è¯¯")
			}
		})
	}
}

// TestManager_SetRuntimeDependencies_Success æµ‹è¯•æˆåŠŸçš„è¿è¡Œæ—¶ä¾èµ–æ³¨å…¥
func TestManager_SetRuntimeDependencies_Success(t *testing.T) {
	manager := createTestManager(t)

	queryService := &mockQueryService{}
	uresCAS := &mockCASStorage{}
	draftSvc := &mockDraftService{}
	hashMgr := testutil.NewTestHashManager()

	err := manager.SetRuntimeDependencies(queryService, uresCAS, draftSvc, hashMgr)
	require.NoError(t, err)

	// éªŒè¯ä¾èµ–å·²æ³¨å…¥
	manager.runtimeMutex.RLock()
	assert.NotNil(t, manager.eutxoQuery, "eutxoQueryåº”è¯¥å·²æ³¨å…¥")
	assert.NotNil(t, manager.uresCAS, "uresCASåº”è¯¥å·²æ³¨å…¥")
	assert.NotNil(t, manager.draftService, "draftServiceåº”è¯¥å·²æ³¨å…¥")
	assert.NotNil(t, manager.hashManager, "hashManageråº”è¯¥å·²æ³¨å…¥")
	manager.runtimeMutex.RUnlock()
}

// TestManager_SetRuntimeDependencies_NilHostProvider æµ‹è¯•hostProviderä¸ºnilçš„æƒ…å†µ
// ğŸ› **BUGæ£€æµ‹**ï¼šå¦‚æœhostProviderä¸ºnilï¼ŒSetRuntimeDependenciesåº”è¯¥è¿”å›é”™è¯¯
func TestManager_SetRuntimeDependencies_NilHostProvider(t *testing.T) {
	logger := testutil.NewTestLogger()
	configProvider := testutil.NewTestConfigProvider()
	clock := testutil.NewTestClock()

	contextManager := ctxmgr.NewManager(logger, configProvider, clock)
	hashManager := testutil.NewTestHashManager()
	signatureManager := testutil.NewTestSignatureManager()
	zkproofManager := zkproof.NewManager(hashManager, signatureManager, logger, configProvider)
	engineManager := &mockInternalEngineManager{}

	// åˆ›å»ºManagerï¼Œä½†hostProviderä¸ºnil
	manager := &Manager{
		engineManager:  engineManager,
		contextManager: contextManager,
		zkproofManager: zkproofManager,
		hostProvider:   nil, // nil hostProvider
		logger:         logger,
		configProvider: configProvider,
		zkProofTaskStore: make(map[string]*zkproof.ZKProofTask),
	}

	queryService := &mockQueryService{}
	uresCAS := &mockCASStorage{}
	draftSvc := &mockDraftService{}
	hashMgr := testutil.NewTestHashManager()

	// âš ï¸ **BUGæ£€æµ‹**ï¼šhostProviderä¸ºnilæ—¶åº”è¯¥è¿”å›é”™è¯¯
	err := manager.SetRuntimeDependencies(queryService, uresCAS, draftSvc, hashMgr)
	assert.Error(t, err, "hostProviderä¸ºnilæ—¶åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "hostProvider cannot be nil")
}

// TestManager_SetRuntimeDependencies_Concurrent æµ‹è¯•å¹¶å‘è®¾ç½®è¿è¡Œæ—¶ä¾èµ–
// ğŸ› **BUGæ£€æµ‹**ï¼šæµ‹è¯•å¹¶å‘å®‰å…¨æ€§
func TestManager_SetRuntimeDependencies_Concurrent(t *testing.T) {
	manager := createTestManager(t)

	queryService := &mockQueryService{}
	uresCAS := &mockCASStorage{}
	draftSvc := &mockDraftService{}
	hashMgr := testutil.NewTestHashManager()

	// å¹¶å‘è®¾ç½®è¿è¡Œæ—¶ä¾èµ–
	concurrency := 10
	done := make(chan bool, concurrency)
	errors := make(chan error, concurrency)

	for i := 0; i < concurrency; i++ {
		go func() {
			defer func() {
				if r := recover(); r != nil {
					errors <- &panicError{panic: r}
				}
				done <- true
			}()

			err := manager.SetRuntimeDependencies(queryService, uresCAS, draftSvc, hashMgr)
			if err != nil {
				errors <- err
			}
		}()
	}

	// ç­‰å¾…æ‰€æœ‰goroutineå®Œæˆ
	for i := 0; i < concurrency; i++ {
		<-done
	}

	// æ£€æŸ¥æ˜¯å¦æœ‰panicæˆ–é”™è¯¯
	select {
	case err := <-errors:
		if _, ok := err.(*panicError); ok {
			t.Errorf("âŒ BUGå‘ç°ï¼šå¹¶å‘è®¾ç½®è¿è¡Œæ—¶ä¾èµ–æ—¶å‘ç”Ÿpanicï¼š%v", err)
		} else {
			t.Logf("âš ï¸ è­¦å‘Šï¼šå¹¶å‘è®¾ç½®è¿è¡Œæ—¶ä¾èµ–æ—¶å‘ç”Ÿé”™è¯¯ï¼ˆå¯èƒ½æ˜¯å¹‚ç­‰é—®é¢˜ï¼‰ï¼š%v", err)
		}
	default:
		t.Logf("âœ… å¹¶å‘è®¾ç½®è¿è¡Œæ—¶ä¾èµ–æ²¡æœ‰å‘ç”Ÿpanicæˆ–é”™è¯¯")
	}

	// éªŒè¯æœ€ç»ˆçŠ¶æ€
	manager.runtimeMutex.RLock()
	assert.NotNil(t, manager.eutxoQuery, "eutxoQueryåº”è¯¥å·²æ³¨å…¥")
	assert.NotNil(t, manager.uresCAS, "uresCASåº”è¯¥å·²æ³¨å…¥")
	assert.NotNil(t, manager.draftService, "draftServiceåº”è¯¥å·²æ³¨å…¥")
	assert.NotNil(t, manager.hashManager, "hashManageråº”è¯¥å·²æ³¨å…¥")
	manager.runtimeMutex.RUnlock()
}


// ============================================================================
// Mockå¯¹è±¡å®šä¹‰
// ============================================================================

// createMockHostProvider åˆ›å»ºMockçš„HostFunctionProvider
// âš ï¸ **æ³¨æ„**ï¼šç”±äºhostabi.NewHostFunctionProvideréœ€è¦å¾ˆå¤šä¾èµ–ï¼Œè¿™é‡Œåˆ›å»ºæœ€å°åŒ–çš„Mock
func createMockHostProvider(t *testing.T, logger interface{}) *hostabi.HostFunctionProvider {
	t.Helper()
	
	// åˆ›å»ºMockä¾èµ–
	mockUTXOQuery := &mockUTXOQuery{}
	mockCASStorage := &mockCASStorage{}
	mockDraftService := &mockDraftService{}
	mockTxAdapter := &mockTxAdapter{}
	mockTxHashClient := &mockTxHashServiceClient{}
	mockAddressManager := &mockAddressManager{}
	
	// åˆ›å»ºHostFunctionProvider
	loggerVal, ok := logger.(log.Logger)
	if !ok {
		t.Fatal("loggerç±»å‹è½¬æ¢å¤±è´¥")
	}
	hostProvider := hostabi.NewHostFunctionProvider(
		loggerVal,
		mockUTXOQuery,
		mockCASStorage,
		mockDraftService,
		mockTxAdapter,
		mockTxHashClient,
		mockAddressManager,
	)
	
	return hostProvider
}

// ============================================================================
// Mockå¯¹è±¡å®šä¹‰ï¼ˆå®ç°æ‰€éœ€æ¥å£ï¼‰
// ============================================================================

// mockUTXOQuery Mockçš„UTXOæŸ¥è¯¢æœåŠ¡
type mockUTXOQuery struct{}

func (m *mockUTXOQuery) GetUTXO(ctx context.Context, outpoint *pb.OutPoint) (*utxo.UTXO, error) {
	return nil, nil
}

func (m *mockUTXOQuery) GetUTXOsByAddress(ctx context.Context, address []byte, category *utxo.UTXOCategory, onlyAvailable bool) ([]*utxo.UTXO, error) {
	return nil, nil
}

func (m *mockUTXOQuery) GetSponsorPoolUTXOs(ctx context.Context, onlyAvailable bool) ([]*utxo.UTXO, error) {
	return nil, nil
}

func (m *mockUTXOQuery) GetCurrentStateRoot(ctx context.Context) ([]byte, error) {
	return nil, nil
}

// mockChainQuery Mockçš„é“¾æŸ¥è¯¢æœåŠ¡
type mockChainQuery struct{}

func (m *mockChainQuery) GetChainInfo(ctx context.Context) (*types.ChainInfo, error) {
	return nil, nil
}

func (m *mockChainQuery) GetCurrentHeight(ctx context.Context) (uint64, error) {
	return 0, nil
}

func (m *mockChainQuery) GetBestBlockHash(ctx context.Context) ([]byte, error) {
	return nil, nil
}

func (m *mockChainQuery) GetNodeMode(ctx context.Context) (types.NodeMode, error) {
	return types.NodeModeFull, nil
}

func (m *mockChainQuery) IsDataFresh(ctx context.Context) (bool, error) {
	return true, nil
}

func (m *mockChainQuery) IsReady(ctx context.Context) (bool, error) {
	return true, nil
}

func (m *mockChainQuery) GetSyncStatus(ctx context.Context) (*types.SystemSyncStatus, error) {
	return nil, nil
}

// mockBlockQuery Mockçš„åŒºå—æŸ¥è¯¢æœåŠ¡
type mockBlockQuery struct{}

func (m *mockBlockQuery) GetBlockByHeight(ctx context.Context, height uint64) (*core.Block, error) {
	return nil, nil
}

func (m *mockBlockQuery) GetBlockByHash(ctx context.Context, blockHash []byte) (*core.Block, error) {
	return nil, nil
}

func (m *mockBlockQuery) GetBlockHeader(ctx context.Context, blockHash []byte) (*core.BlockHeader, error) {
	return nil, nil
}

func (m *mockBlockQuery) GetBlockRange(ctx context.Context, startHeight, endHeight uint64) ([]*core.Block, error) {
	return nil, nil
}

func (m *mockBlockQuery) GetHighestBlock(ctx context.Context) (height uint64, blockHash []byte, err error) {
	return 0, nil, nil
}

// mockTxQuery Mockçš„äº¤æ˜“æŸ¥è¯¢æœåŠ¡
type mockTxQuery struct{}

func (m *mockTxQuery) GetTransaction(ctx context.Context, txHash []byte) (blockHash []byte, txIndex uint32, tx *pb.Transaction, err error) {
	return nil, 0, nil, nil
}

func (m *mockTxQuery) GetTxBlockHeight(ctx context.Context, txHash []byte) (uint64, error) {
	return 0, nil
}

func (m *mockTxQuery) GetBlockTimestamp(ctx context.Context, height uint64) (int64, error) {
	return 0, nil
}

func (m *mockTxQuery) GetAccountNonce(ctx context.Context, address []byte) (uint64, error) {
	return 0, nil
}

func (m *mockTxQuery) GetTransactionsByBlock(ctx context.Context, blockHash []byte) ([]*pb.Transaction, error) {
	return nil, nil
}

// mockResourceQuery Mockçš„èµ„æºæŸ¥è¯¢æœåŠ¡
type mockResourceQuery struct{}

func (m *mockResourceQuery) GetResourceByContentHash(ctx context.Context, contentHash []byte) (*pb_resource.Resource, error) {
	return nil, nil
}

func (m *mockResourceQuery) GetResourceFromBlockchain(ctx context.Context, contentHash []byte) (*pb_resource.Resource, bool, error) {
	return nil, false, nil
}

func (m *mockResourceQuery) GetResourceTransaction(ctx context.Context, contentHash []byte) (txHash, blockHash []byte, blockHeight uint64, err error) {
	return nil, nil, 0, nil
}

func (m *mockResourceQuery) CheckFileExists(contentHash []byte) bool {
	return false
}

func (m *mockResourceQuery) BuildFilePath(contentHash []byte) string {
	return ""
}

func (m *mockResourceQuery) ListResourceHashes(ctx context.Context, offset int, limit int) ([][]byte, error) {
	return nil, nil
}

// mockAccountQuery Mockçš„è´¦æˆ·æŸ¥è¯¢æœåŠ¡
type mockAccountQuery struct{}

func (m *mockAccountQuery) GetAccountBalance(ctx context.Context, address []byte, tokenID []byte) (*types.BalanceInfo, error) {
	return nil, nil
}

// mockPricingQuery Mockçš„å®šä»·æŸ¥è¯¢æœåŠ¡
type mockPricingQuery struct{}

func (m *mockPricingQuery) GetPricingState(ctx context.Context, resourceHash []byte) (*types.ResourcePricingState, error) {
	return nil, nil
}

// mockQueryService Mockçš„æŸ¥è¯¢æœåŠ¡ï¼ˆå®ç°QueryServiceæ¥å£ï¼‰
type mockQueryService struct {
	mockChainQuery
	mockBlockQuery
	mockTxQuery
	mockUTXOQuery
	mockResourceQuery
	mockAccountQuery
	mockPricingQuery
}

// mockCASStorage Mockçš„CASå­˜å‚¨ï¼ˆå®ç°CASStorageæ¥å£ï¼‰
type mockCASStorage struct{}

func (m *mockCASStorage) BuildFilePath(contentHash []byte) string {
	return ""
}

func (m *mockCASStorage) StoreFile(ctx context.Context, contentHash []byte, data []byte) error {
	return nil
}

func (m *mockCASStorage) ReadFile(ctx context.Context, contentHash []byte) ([]byte, error) {
	return nil, nil
}

func (m *mockCASStorage) FileExists(contentHash []byte) bool {
	return false
}

// mockDraftService Mockçš„äº¤æ˜“è‰ç¨¿æœåŠ¡ï¼ˆå®ç°TransactionDraftServiceæ¥å£ï¼‰
type mockDraftService struct{}

func (m *mockDraftService) CreateDraft(ctx context.Context) (*types.DraftTx, error) {
	return nil, nil
}

func (m *mockDraftService) LoadDraft(ctx context.Context, draftID string) (*types.DraftTx, error) {
	return nil, nil
}

func (m *mockDraftService) SaveDraft(ctx context.Context, draft *types.DraftTx) error {
	return nil
}

func (m *mockDraftService) DeleteDraft(ctx context.Context, draftID string) error {
	return nil
}

func (m *mockDraftService) SealDraft(ctx context.Context, draft *types.DraftTx) (*types.ComposedTx, error) {
	return nil, nil
}

func (m *mockDraftService) AddInput(ctx context.Context, draft *types.DraftTx, outpoint *pb.OutPoint, isReferenceOnly bool, unlockingProof *pb.UnlockingProof) (uint32, error) {
	return 0, nil
}

func (m *mockDraftService) AddAssetOutput(ctx context.Context, draft *types.DraftTx, owner []byte, amount string, tokenID []byte, lockingConditions []*pb.LockingCondition) (uint32, error) {
	return 0, nil
}

func (m *mockDraftService) AddResourceOutput(ctx context.Context, draft *types.DraftTx, contentHash []byte, category string, owner []byte, lockingConditions []*pb.LockingCondition, metadata []byte) (uint32, error) {
	return 0, nil
}

func (m *mockDraftService) AddStateOutput(ctx context.Context, draft *types.DraftTx, stateID []byte, stateVersion uint64, executionResultHash []byte, publicInputs []byte, parentStateHash []byte) (uint32, error) {
	return 0, nil
}

func (m *mockDraftService) GetDraftByID(ctx context.Context, draftID string) (*types.DraftTx, error) {
	return nil, nil
}

func (m *mockDraftService) ValidateDraft(ctx context.Context, draft *types.DraftTx) error {
	return nil
}

// mockTxAdapter Mockçš„TXé€‚é…å™¨ï¼ˆå®ç°hostabi.TxAdapteræ¥å£ï¼‰
type mockTxAdapter struct{}

func (m *mockTxAdapter) BeginTransaction(ctx context.Context, blockHeight uint64, blockTimestamp uint64) (int32, error) {
	return 0, nil
}

func (m *mockTxAdapter) AddTransfer(ctx context.Context, draftHandle int32, from []byte, to []byte, amount string, tokenID []byte) (int32, error) {
	return 0, nil
}

func (m *mockTxAdapter) AddCustomInput(ctx context.Context, draftHandle int32, outpoint *pb.OutPoint, isReferenceOnly bool) (int32, error) {
	return 0, nil
}

func (m *mockTxAdapter) AddCustomOutput(ctx context.Context, draftHandle int32, output *pb.TxOutput) (int32, error) {
	return 0, nil
}

func (m *mockTxAdapter) GetDraft(ctx context.Context, draftHandle int32) (*types.DraftTx, error) {
	return nil, nil
}

func (m *mockTxAdapter) FinalizeTransaction(ctx context.Context, draftHandle int32) (*pb.Transaction, error) {
	return nil, nil
}

func (m *mockTxAdapter) CleanupDraft(ctx context.Context, draftHandle int32) error {
	return nil
}

// mockTxHashServiceClient Mockçš„äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯
type mockTxHashServiceClient struct{}

func (m *mockTxHashServiceClient) ComputeTransactionHash(ctx context.Context, tx *pb.Transaction) ([]byte, error) {
	return nil, nil
}

func (m *mockTxHashServiceClient) ComputeHash(ctx context.Context, in *pb.ComputeHashRequest, opts ...grpc.CallOption) (*pb.ComputeHashResponse, error) {
	return &pb.ComputeHashResponse{Hash: nil}, nil
}

func (m *mockTxHashServiceClient) ValidateHash(ctx context.Context, in *pb.ValidateHashRequest, opts ...grpc.CallOption) (*pb.ValidateHashResponse, error) {
	return &pb.ValidateHashResponse{IsValid: true}, nil
}

func (m *mockTxHashServiceClient) ComputeSignatureHash(ctx context.Context, in *pb.ComputeSignatureHashRequest, opts ...grpc.CallOption) (*pb.ComputeSignatureHashResponse, error) {
	return &pb.ComputeSignatureHashResponse{Hash: nil}, nil
}

func (m *mockTxHashServiceClient) ValidateSignatureHash(ctx context.Context, in *pb.ValidateSignatureHashRequest, opts ...grpc.CallOption) (*pb.ValidateSignatureHashResponse, error) {
	return &pb.ValidateSignatureHashResponse{IsValid: true}, nil
}

// mockAddressManager Mockçš„åœ°å€ç®¡ç†å™¨
type mockAddressManager struct{}

func (m *mockAddressManager) EncodeAddress(address []byte) string {
	return ""
}

func (m *mockAddressManager) DecodeAddress(encoded string) ([]byte, error) {
	return nil, nil
}

func (m *mockAddressManager) ValidateAddress(address string) (bool, error) {
	return true, nil
}

func (m *mockAddressManager) AddressToBytes(address string) ([]byte, error) {
	return nil, nil
}

func (m *mockAddressManager) AddressToHexString(address string) (string, error) {
	return "", nil
}

func (m *mockAddressManager) HexStringToAddress(hexString string) (string, error) {
	return "", nil
}

func (m *mockAddressManager) BytesToAddress(addressBytes []byte) (string, error) {
	return "", nil
}

func (m *mockAddressManager) PrivateKeyToAddress(privateKey []byte) (string, error) {
	return "", nil
}

func (m *mockAddressManager) PublicKeyToAddress(publicKey []byte) (string, error) {
	return "", nil
}

func (m *mockAddressManager) CompareAddresses(addr1, addr2 string) (bool, error) {
	return false, nil
}

func (m *mockAddressManager) GetAddressType(address string) (crypto.AddressType, error) {
	return crypto.AddressTypeBitcoin, nil
}

func (m *mockAddressManager) IsZeroAddress(address string) bool {
	return false
}

func (m *mockAddressManager) StringToAddress(addressStr string) (string, error) {
	return "", nil
}

// panicError ç”¨äºæ•è·panicé”™è¯¯
type panicError struct {
	panic interface{}
}

func (e *panicError) Error() string {
	return "panic occurred"
}

