package adapter

import (
	"context"

	publicispc "github.com/weisyn/v1/pkg/interfaces/ispc"
	pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// ONNXAdapter ONNXå®¿ä¸»å‡½æ•°é€‚é…å™¨
//
// ğŸ¯ **è®¾è®¡ç›®çš„**ï¼šä»HostABIæ„å»ºONNXå¼•æ“å…¼å®¹çš„å®¿ä¸»å‡½æ•°æ˜ å°„
// ğŸ“‹ **èŒè´£**ï¼šä¸ºONNXæ¨¡å‹æä¾›æœ€å°çš„åªè¯»å®¿ä¸»å‡½æ•°é›†åˆ
//
// ğŸ—ï¸ **æ¶æ„ä½ç½®**ï¼š
// - ä½œä¸ºhostabi/adapterçš„ä¸€éƒ¨åˆ†
// - ä¸ºONNXå¼•æ“æä¾›ä¸“ç”¨çš„å®¿ä¸»å‡½æ•°é›†åˆ
//
// ğŸ”§ **è®¾è®¡åŸåˆ™**ï¼š
// - åªæä¾›åªè¯»æŸ¥è¯¢å‡½æ•°ï¼ˆ5ä¸ªæœ€å°åŸè¯­ï¼‰
// - ä¸æä¾›ä»»ä½•å†™æ“ä½œ
// - ä½¿ç”¨GoåŸç”Ÿç±»å‹ï¼Œä¾¿äºONNXå¼•æ“é›†æˆ
type ONNXAdapter struct{}

// NewONNXAdapter åˆ›å»ºONNXé€‚é…å™¨
func NewONNXAdapter() *ONNXAdapter {
	return &ONNXAdapter{}
}

// BuildHostFunctions æ„å»ºONNXå®¿ä¸»å‡½æ•°æ˜ å°„
//
// ğŸ“‹ **å‚æ•°**ï¼š
//   - ctx: è°ƒç”¨ä¸Šä¸‹æ–‡ï¼ˆåŒ…å«ExecutionContextï¼‰
//   - hostABI: HostABIå®ä¾‹
//
// ğŸ”§ **è¿”å›å€¼**ï¼š
//   - map[string]interface{}: ONNXå®¿ä¸»å‡½æ•°æ˜ å°„ï¼ˆ5ä¸ªæœ€å°åªè¯»åŸè¯­ï¼‰
//
// ğŸ¯ **è®¾è®¡è¯´æ˜**ï¼š
// ONNXæ¨¡å‹æ¨ç†ä¸»è¦ç”¨äºé“¾ä¸ŠAIè®¡ç®—ï¼Œæä¾›æœ€å°çš„åªè¯»æŸ¥è¯¢èƒ½åŠ›ï¼š
//  1. ç¡®å®šæ€§åŒºå—è§†å›¾ - ç”¨äºæ—¶é—´ç›¸å…³çš„æ¨¡å‹è¾“å…¥
//  2. UTXOå­˜åœ¨æ€§æŸ¥è¯¢ - ç”¨äºéªŒè¯æ¨¡å‹è¾“å…¥çš„èµ„äº§å­˜åœ¨æ€§
//  3. èµ„æºå­˜åœ¨æ€§æŸ¥è¯¢ - ç”¨äºåŠ è½½æ¨¡å‹ä¾èµ–çš„å…¶ä»–èµ„æº
//
// âš ï¸ **çº¦æŸ**ï¼š
//   - åªæä¾›åªè¯»æ“ä½œï¼Œä¸æä¾›å†™æ“ä½œ
//   - ä¸æä¾›äº¤æ˜“è‰ç¨¿æ“ä½œï¼ˆONNXä¸æ„å»ºäº¤æ˜“ï¼‰
//   - å‚æ•°å’Œè¿”å›å€¼ä½¿ç”¨GoåŸç”Ÿç±»å‹ï¼Œä¾¿äºONNXå¼•æ“é›†æˆ
func (a *ONNXAdapter) BuildHostFunctions(
	ctx context.Context,
	hostABI publicispc.HostABI,
) map[string]interface{} {
	// ğŸ¯ **5ä¸ªæœ€å°åªè¯»åŸè¯­çš„ONNXé€‚é…**
	//
	// æ³¨æ„ï¼šONNXå¼•æ“è°ƒç”¨çº¦å®šä¸WASMä¸åŒï¼Œè¿™é‡Œä½¿ç”¨GoåŸç”Ÿç±»å‹

	return map[string]interface{}{
		// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
		// ç±»åˆ« Aï¼šç¡®å®šæ€§åŒºå—è§†å›¾ï¼ˆåªè¯»ï¼‰
		// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

		"get_block_height": func() int64 {
			height, err := hostABI.GetBlockHeight(ctx)
			if err != nil {
				return 0
			}
			return int64(height)
		},

		"get_block_timestamp": func() int64 {
			timestamp, err := hostABI.GetBlockTimestamp(ctx)
			if err != nil {
				return 0
			}
			return int64(timestamp)
		},

		"get_chain_id": func() []byte {
			chainID, err := hostABI.GetChainID(ctx)
			if err != nil {
				return nil
			}
			return chainID
		},

		// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
		// ç±»åˆ« Bï¼šå­˜åœ¨æ€§æŸ¥è¯¢ï¼ˆåªè¯»ï¼‰
		// â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

		"utxo_exists": func(txHash []byte, index uint32) bool {
			if len(txHash) != 32 {
				return false
			}
			outpoint := &pb.OutPoint{
				TxId:        txHash,
				OutputIndex: index,
			}
			exists, err := hostABI.UTXOExists(ctx, outpoint)
			if err != nil {
				return false
			}
			return exists
		},

		"resource_exists": func(contentHash []byte) bool {
			if len(contentHash) != 32 {
				return false
			}
			exists, err := hostABI.ResourceExists(ctx, contentHash)
			if err != nil {
				return false
			}
			return exists
		},

		// æ³¨æ„ï¼šONNXä¸æä¾›ä»¥ä¸‹èƒ½åŠ›ï¼ˆä¸WASMçš„åŒºåˆ«ï¼‰ï¼š
		// - âŒ ä¸æä¾›GetCaller/GetContractAddressï¼ˆONNXæ¨¡å‹æ— è°ƒç”¨è€…æ¦‚å¿µï¼‰
		// - âŒ ä¸æä¾›UTXOLookup/ResourceLookupï¼ˆONNXåªéœ€è¦å­˜åœ¨æ€§æ£€æŸ¥ï¼‰
		// - âŒ ä¸æä¾›ä»»ä½•äº¤æ˜“è‰ç¨¿æ“ä½œï¼ˆONNXä¸æ„å»ºäº¤æ˜“ï¼‰
		// - âŒ ä¸æä¾›EmitEvent/LogDebugï¼ˆONNXæ˜¯çº¯è®¡ç®—ï¼Œæ— å‰¯ä½œç”¨ï¼‰
	}
}

