package adapter

import (
	"context"
	"testing"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	pbresource "github.com/weisyn/v1/pb/blockchain/block/transaction/resource"
)

// ============================================================================
// ONNXAdapteræµ‹è¯•
// ============================================================================
//
// ğŸ¯ **æµ‹è¯•ç›®çš„**ï¼šå‘ç°ONNXAdapterçš„ç¼ºé™·å’ŒBUG
//
// ============================================================================

// mockHostABI Mockçš„HostABI
type mockHostABI struct {
	blockHeight    uint64
	blockTimestamp uint64
	chainID        []byte
	utxoExists     bool
	resourceExists bool
	err            error
}

func (m *mockHostABI) GetBlockHeight(ctx context.Context) (uint64, error) {
	if m.err != nil {
		return 0, m.err
	}
	return m.blockHeight, nil
}

func (m *mockHostABI) GetBlockTimestamp(ctx context.Context) (uint64, error) {
	if m.err != nil {
		return 0, m.err
	}
	return m.blockTimestamp, nil
}

func (m *mockHostABI) GetChainID(ctx context.Context) ([]byte, error) {
	if m.err != nil {
		return nil, m.err
	}
	return m.chainID, nil
}

func (m *mockHostABI) UTXOExists(ctx context.Context, outpoint *pb.OutPoint) (bool, error) {
	if m.err != nil {
		return false, m.err
	}
	return m.utxoExists, nil
}

func (m *mockHostABI) ResourceExists(ctx context.Context, contentHash []byte) (bool, error) {
	if m.err != nil {
		return false, m.err
	}
	return m.resourceExists, nil
}

// å®ç°å…¶ä»–å¿…éœ€çš„æ–¹æ³•ï¼ˆæœ€å°å®ç°ï¼‰
func (m *mockHostABI) GetCaller(ctx context.Context) ([]byte, error) { return nil, nil }
func (m *mockHostABI) GetCallerAddress(ctx context.Context) ([]byte, error) { return nil, nil }
func (m *mockHostABI) GetContractAddress(ctx context.Context) ([]byte, error) { return nil, nil }
func (m *mockHostABI) GetTransactionID(ctx context.Context) ([]byte, error) { return nil, nil }
func (m *mockHostABI) GetBlockHash(ctx context.Context, height uint64) ([]byte, error) { return nil, nil }
func (m *mockHostABI) UTXOLookup(ctx context.Context, outpoint *pb.OutPoint) (*pb.TxOutput, error) { return nil, nil }
func (m *mockHostABI) ResourceLookup(ctx context.Context, contentHash []byte) (*pbresource.Resource, error) { return nil, nil }
func (m *mockHostABI) TxAddInput(ctx context.Context, outpoint *pb.OutPoint, isReferenceOnly bool, unlockingProof *pb.UnlockingProof) (uint32, error) { return 0, nil }
func (m *mockHostABI) TxAddAssetOutput(ctx context.Context, owner []byte, amount uint64, tokenID []byte, lockingConditions []*pb.LockingCondition) (uint32, error) { return 0, nil }
func (m *mockHostABI) TxAddResourceOutput(ctx context.Context, contentHash []byte, category string, owner []byte, lockingConditions []*pb.LockingCondition, metadata []byte) (uint32, error) { return 0, nil }
func (m *mockHostABI) TxAddStateOutput(ctx context.Context, stateID []byte, stateVersion uint64, executionResultHash []byte, publicInputs []byte, parentStateHash []byte) (uint32, error) { return 0, nil }
func (m *mockHostABI) EmitEvent(ctx context.Context, eventType string, data []byte) error { return nil }
func (m *mockHostABI) LogDebug(ctx context.Context, message string) error { return nil }

// TestNewONNXAdapter æµ‹è¯•åˆ›å»ºONNXé€‚é…å™¨
func TestNewONNXAdapter(t *testing.T) {
	adapter := NewONNXAdapter()
	assert.NotNil(t, adapter, "é€‚é…å™¨ä¸åº”è¯¥ä¸ºnil")
}

// TestONNXAdapter_BuildHostFunctions æµ‹è¯•æ„å»ºONNXå®¿ä¸»å‡½æ•°æ˜ å°„
func TestONNXAdapter_BuildHostFunctions(t *testing.T) {
	adapter := NewONNXAdapter()
	mockABI := &mockHostABI{
		blockHeight:    100,
		blockTimestamp: 1234567890,
		chainID:        []byte{0x01, 0x02, 0x03},
		utxoExists:     true,
		resourceExists: true,
	}

	ctx := context.Background()
	functions := adapter.BuildHostFunctions(ctx, mockABI)

	assert.NotNil(t, functions, "å‡½æ•°æ˜ å°„ä¸åº”è¯¥ä¸ºnil")
	assert.Equal(t, 5, len(functions), "åº”è¯¥æœ‰5ä¸ªå®¿ä¸»å‡½æ•°")

	// éªŒè¯å‡½æ•°å­˜åœ¨
	assert.Contains(t, functions, "get_block_height", "åº”è¯¥åŒ…å«get_block_height")
	assert.Contains(t, functions, "get_block_timestamp", "åº”è¯¥åŒ…å«get_block_timestamp")
	assert.Contains(t, functions, "get_chain_id", "åº”è¯¥åŒ…å«get_chain_id")
	assert.Contains(t, functions, "utxo_exists", "åº”è¯¥åŒ…å«utxo_exists")
	assert.Contains(t, functions, "resource_exists", "åº”è¯¥åŒ…å«resource_exists")
}

// TestONNXAdapter_GetBlockHeight æµ‹è¯•get_block_heightå‡½æ•°
func TestONNXAdapter_GetBlockHeight(t *testing.T) {
	adapter := NewONNXAdapter()
	mockABI := &mockHostABI{
		blockHeight: 100,
	}

	ctx := context.Background()
	functions := adapter.BuildHostFunctions(ctx, mockABI)

	getBlockHeight, ok := functions["get_block_height"].(func() int64)
	require.True(t, ok, "get_block_heightåº”è¯¥æ˜¯func() int64ç±»å‹")

	height := getBlockHeight()
	assert.Equal(t, int64(100), height, "åº”è¯¥è¿”å›æ­£ç¡®çš„åŒºå—é«˜åº¦")
}

// TestONNXAdapter_GetBlockHeight_Error æµ‹è¯•get_block_heighté”™è¯¯å¤„ç†
func TestONNXAdapter_GetBlockHeight_Error(t *testing.T) {
	adapter := NewONNXAdapter()
	mockABI := &mockHostABI{
		err: assert.AnError,
	}

	ctx := context.Background()
	functions := adapter.BuildHostFunctions(ctx, mockABI)

	getBlockHeight, ok := functions["get_block_height"].(func() int64)
	require.True(t, ok, "get_block_heightåº”è¯¥æ˜¯func() int64ç±»å‹")

	height := getBlockHeight()
	assert.Equal(t, int64(0), height, "é”™è¯¯æ—¶åº”è¯¥è¿”å›0")
}

// TestONNXAdapter_GetBlockTimestamp æµ‹è¯•get_block_timestampå‡½æ•°
func TestONNXAdapter_GetBlockTimestamp(t *testing.T) {
	adapter := NewONNXAdapter()
	mockABI := &mockHostABI{
		blockTimestamp: 1234567890,
	}

	ctx := context.Background()
	functions := adapter.BuildHostFunctions(ctx, mockABI)

	getBlockTimestamp, ok := functions["get_block_timestamp"].(func() int64)
	require.True(t, ok, "get_block_timestampåº”è¯¥æ˜¯func() int64ç±»å‹")

	timestamp := getBlockTimestamp()
	assert.Equal(t, int64(1234567890), timestamp, "åº”è¯¥è¿”å›æ­£ç¡®çš„æ—¶é—´æˆ³")
}

// TestONNXAdapter_GetChainID æµ‹è¯•get_chain_idå‡½æ•°
func TestONNXAdapter_GetChainID(t *testing.T) {
	adapter := NewONNXAdapter()
	expectedChainID := []byte{0x01, 0x02, 0x03}
	mockABI := &mockHostABI{
		chainID: expectedChainID,
	}

	ctx := context.Background()
	functions := adapter.BuildHostFunctions(ctx, mockABI)

	getChainID, ok := functions["get_chain_id"].(func() []byte)
	require.True(t, ok, "get_chain_idåº”è¯¥æ˜¯func() []byteç±»å‹")

	chainID := getChainID()
	assert.Equal(t, expectedChainID, chainID, "åº”è¯¥è¿”å›æ­£ç¡®çš„é“¾ID")
}

// TestONNXAdapter_GetChainID_Error æµ‹è¯•get_chain_idé”™è¯¯å¤„ç†
func TestONNXAdapter_GetChainID_Error(t *testing.T) {
	adapter := NewONNXAdapter()
	mockABI := &mockHostABI{
		err: assert.AnError,
	}

	ctx := context.Background()
	functions := adapter.BuildHostFunctions(ctx, mockABI)

	getChainID, ok := functions["get_chain_id"].(func() []byte)
	require.True(t, ok, "get_chain_idåº”è¯¥æ˜¯func() []byteç±»å‹")

	chainID := getChainID()
	assert.Nil(t, chainID, "é”™è¯¯æ—¶åº”è¯¥è¿”å›nil")
}

// TestONNXAdapter_UTXOExists æµ‹è¯•utxo_existså‡½æ•°
func TestONNXAdapter_UTXOExists(t *testing.T) {
	adapter := NewONNXAdapter()
	mockABI := &mockHostABI{
		utxoExists: true,
	}

	ctx := context.Background()
	functions := adapter.BuildHostFunctions(ctx, mockABI)

	utxoExists, ok := functions["utxo_exists"].(func([]byte, uint32) bool)
	require.True(t, ok, "utxo_existsåº”è¯¥æ˜¯func([]byte, uint32) boolç±»å‹")

	txHash := make([]byte, 32)
	txHash[0] = 0x12
	exists := utxoExists(txHash, 0)
	assert.True(t, exists, "åº”è¯¥è¿”å›true")
}

// TestONNXAdapter_UTXOExists_InvalidHash æµ‹è¯•utxo_existsæ— æ•ˆå“ˆå¸Œ
// ğŸ› **BUGæ£€æµ‹**ï¼šæ— æ•ˆå“ˆå¸Œé•¿åº¦åº”è¯¥è¿”å›false
func TestONNXAdapter_UTXOExists_InvalidHash(t *testing.T) {
	adapter := NewONNXAdapter()
	mockABI := &mockHostABI{
		utxoExists: true,
	}

	ctx := context.Background()
	functions := adapter.BuildHostFunctions(ctx, mockABI)

	utxoExists, ok := functions["utxo_exists"].(func([]byte, uint32) bool)
	require.True(t, ok, "utxo_existsåº”è¯¥æ˜¯func([]byte, uint32) boolç±»å‹")

	invalidHash := []byte{0x12, 0x34} // é•¿åº¦ä¸æ˜¯32å­—èŠ‚
	exists := utxoExists(invalidHash, 0)
	assert.False(t, exists, "æ— æ•ˆå“ˆå¸Œåº”è¯¥è¿”å›false")
}

// TestONNXAdapter_UTXOExists_Error æµ‹è¯•utxo_existsé”™è¯¯å¤„ç†
func TestONNXAdapter_UTXOExists_Error(t *testing.T) {
	adapter := NewONNXAdapter()
	mockABI := &mockHostABI{
		err: assert.AnError,
	}

	ctx := context.Background()
	functions := adapter.BuildHostFunctions(ctx, mockABI)

	utxoExists, ok := functions["utxo_exists"].(func([]byte, uint32) bool)
	require.True(t, ok, "utxo_existsåº”è¯¥æ˜¯func([]byte, uint32) boolç±»å‹")

	txHash := make([]byte, 32)
	exists := utxoExists(txHash, 0)
	assert.False(t, exists, "é”™è¯¯æ—¶åº”è¯¥è¿”å›false")
}

// TestONNXAdapter_ResourceExists æµ‹è¯•resource_existså‡½æ•°
func TestONNXAdapter_ResourceExists(t *testing.T) {
	adapter := NewONNXAdapter()
	mockABI := &mockHostABI{
		resourceExists: true,
	}

	ctx := context.Background()
	functions := adapter.BuildHostFunctions(ctx, mockABI)

	resourceExists, ok := functions["resource_exists"].(func([]byte) bool)
	require.True(t, ok, "resource_existsåº”è¯¥æ˜¯func([]byte) boolç±»å‹")

	contentHash := make([]byte, 32)
	contentHash[0] = 0x12
	exists := resourceExists(contentHash)
	assert.True(t, exists, "åº”è¯¥è¿”å›true")
}

// TestONNXAdapter_ResourceExists_InvalidHash æµ‹è¯•resource_existsæ— æ•ˆå“ˆå¸Œ
// ğŸ› **BUGæ£€æµ‹**ï¼šæ— æ•ˆå“ˆå¸Œé•¿åº¦åº”è¯¥è¿”å›false
func TestONNXAdapter_ResourceExists_InvalidHash(t *testing.T) {
	adapter := NewONNXAdapter()
	mockABI := &mockHostABI{
		resourceExists: true,
	}

	ctx := context.Background()
	functions := adapter.BuildHostFunctions(ctx, mockABI)

	resourceExists, ok := functions["resource_exists"].(func([]byte) bool)
	require.True(t, ok, "resource_existsåº”è¯¥æ˜¯func([]byte) boolç±»å‹")

	invalidHash := []byte{0x12, 0x34} // é•¿åº¦ä¸æ˜¯32å­—èŠ‚
	exists := resourceExists(invalidHash)
	assert.False(t, exists, "æ— æ•ˆå“ˆå¸Œåº”è¯¥è¿”å›false")
}

// TestONNXAdapter_ResourceExists_Error æµ‹è¯•resource_existsé”™è¯¯å¤„ç†
func TestONNXAdapter_ResourceExists_Error(t *testing.T) {
	adapter := NewONNXAdapter()
	mockABI := &mockHostABI{
		err: assert.AnError,
	}

	ctx := context.Background()
	functions := adapter.BuildHostFunctions(ctx, mockABI)

	resourceExists, ok := functions["resource_exists"].(func([]byte) bool)
	require.True(t, ok, "resource_existsåº”è¯¥æ˜¯func([]byte) boolç±»å‹")

	contentHash := make([]byte, 32)
	exists := resourceExists(contentHash)
	assert.False(t, exists, "é”™è¯¯æ—¶åº”è¯¥è¿”å›false")
}

