// Package aggregator å®ç° QueryService çš„èšåˆå™¨
//
// ğŸ” **æŸ¥è¯¢æœåŠ¡èšåˆå™¨ (Query Service Aggregator)**
//
// æœ¬åŒ…å®ç° QueryService çš„èšåˆé€»è¾‘ï¼Œå°†æ‰€æœ‰å­æŸ¥è¯¢æœåŠ¡ç»„åˆä¸ºç»Ÿä¸€çš„æŸ¥è¯¢å…¥å£ã€‚
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - å®ç° interfaces.InternalQueryService æ¥å£
// - èšåˆæ‰€æœ‰é¢†åŸŸæŸ¥è¯¢æœåŠ¡ï¼ˆé€šè¿‡ç»„åˆï¼‰
// - æä¾›ç»Ÿä¸€çš„æŸ¥è¯¢å…¥å£ï¼ˆé€šè¿‡å§”æ‰˜ï¼‰
//
// ğŸ—ï¸ **è®¾è®¡åŸåˆ™**ï¼š
// - çº¯èšåˆï¼šåªåšæ¥å£ç»„åˆå’Œæ–¹æ³•å§”æ‰˜ï¼Œæ— ä¸šåŠ¡é€»è¾‘
// - éµå¾ªè§„èŒƒï¼šå®ç°å±‚åœ¨å­ç›®å½•ä¸­ï¼ˆaggregator/ï¼‰
// - ä¾èµ–æ³¨å…¥ï¼šé€šè¿‡ fx æ¥æ”¶æ‰€æœ‰å­æœåŠ¡
package aggregator

import (
	"context"
	"fmt"

	"github.com/weisyn/v1/internal/core/persistence/query/interfaces"
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	pb_resource "github.com/weisyn/v1/pb/blockchain/block/transaction/resource"
	"github.com/weisyn/v1/pb/blockchain/utxo"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/types"
)

// Service ç»Ÿä¸€æŸ¥è¯¢æœåŠ¡å®ç°
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// èšåˆæ‰€æœ‰é¢†åŸŸæŸ¥è¯¢æœåŠ¡ï¼Œå®ç°ç»Ÿä¸€çš„ QueryService æ¥å£ã€‚
//
// ğŸ’¡ **å®ç°æ–¹å¼**ï¼š
// - ç»„åˆæ‰€æœ‰é¢†åŸŸæŸ¥è¯¢æœåŠ¡
// - é€šè¿‡å§”æ‰˜æ¨¡å¼å®ç°æŸ¥è¯¢æ–¹æ³•
// - éµå¾ªä»£ç ç»„ç»‡è§„èŒƒï¼Œå®ç°å†…éƒ¨æ¥å£
type Service struct {
	chainQuery    interfaces.InternalChainQuery    // é“¾çŠ¶æ€æŸ¥è¯¢
	blockQuery    interfaces.InternalBlockQuery    // åŒºå—æŸ¥è¯¢
	txQuery       interfaces.InternalTxQuery       // äº¤æ˜“æŸ¥è¯¢
	utxoQuery     interfaces.InternalUTXOQuery     // EUTXOæŸ¥è¯¢
	resourceQuery interfaces.InternalResourceQuery // èµ„æºæŸ¥è¯¢
	accountQuery  interfaces.InternalAccountQuery  // è´¦æˆ·æŸ¥è¯¢
	pricingQuery  interfaces.InternalPricingQuery  // å®šä»·æŸ¥è¯¢ï¼ˆPhase 2ï¼‰
	logger        log.Logger                       // æ—¥å¿—è®°å½•å™¨
}

// NewService åˆ›å»ºæ–°çš„æŸ¥è¯¢æœåŠ¡
//
// ğŸ—ï¸ **æ„é€ å™¨æ¨¡å¼**ï¼š
// é€šè¿‡ä¾èµ–æ³¨å…¥æ–¹å¼åˆ›å»ºæœåŠ¡å®ä¾‹ï¼Œéµå¾ªä»£ç ç»„ç»‡è§„èŒƒã€‚
//
// âš™ï¸ **å‚æ•°è¯´æ˜**ï¼š
// - chainQuery: é“¾çŠ¶æ€æŸ¥è¯¢æœåŠ¡ï¼ˆå†…éƒ¨æ¥å£ï¼‰
// - blockQuery: åŒºå—æŸ¥è¯¢æœåŠ¡ï¼ˆå†…éƒ¨æ¥å£ï¼‰
// - txQuery: äº¤æ˜“æŸ¥è¯¢æœåŠ¡ï¼ˆå†…éƒ¨æ¥å£ï¼‰
// - utxoQuery: EUTXOæŸ¥è¯¢æœåŠ¡ï¼ˆå†…éƒ¨æ¥å£ï¼‰
// - resourceQuery: èµ„æºæŸ¥è¯¢æœåŠ¡ï¼ˆå†…éƒ¨æ¥å£ï¼‰
// - accountQuery: è´¦æˆ·æŸ¥è¯¢æœåŠ¡ï¼ˆå†…éƒ¨æ¥å£ï¼‰
// - logger: æ—¥å¿—è®°å½•å™¨
//
// ğŸ’¡ **æ³¨æ„äº‹é¡¹**ï¼š
// - æ‰€æœ‰å­æŸ¥è¯¢æœåŠ¡å¿…é¡»éç©º
// - logger å¯é€‰ï¼Œä½†å¼ºçƒˆå»ºè®®æä¾›
// - è¿”å›å†…éƒ¨æ¥å£ç±»å‹ï¼Œç”± module.go ç»‘å®šåˆ°å…¬å…±æ¥å£
func NewService(
	chainQuery interfaces.InternalChainQuery,
	blockQuery interfaces.InternalBlockQuery,
	txQuery interfaces.InternalTxQuery,
	utxoQuery interfaces.InternalUTXOQuery,
	resourceQuery interfaces.InternalResourceQuery,
	accountQuery interfaces.InternalAccountQuery,
	pricingQuery interfaces.InternalPricingQuery, // Phase 2
	logger log.Logger,
) (interfaces.InternalQueryService, error) {
	// éªŒè¯æ‰€æœ‰æŸ¥è¯¢æœåŠ¡
	if chainQuery == nil {
		return nil, fmt.Errorf("chainQuery ä¸èƒ½ä¸ºç©º")
	}
	if blockQuery == nil {
		return nil, fmt.Errorf("blockQuery ä¸èƒ½ä¸ºç©º")
	}
	if txQuery == nil {
		return nil, fmt.Errorf("txQuery ä¸èƒ½ä¸ºç©º")
	}
	if utxoQuery == nil {
		return nil, fmt.Errorf("utxoQuery ä¸èƒ½ä¸ºç©º")
	}
	if resourceQuery == nil {
		return nil, fmt.Errorf("resourceQuery ä¸èƒ½ä¸ºç©º")
	}
	if accountQuery == nil {
		return nil, fmt.Errorf("accountQuery ä¸èƒ½ä¸ºç©º")
	}
	if pricingQuery == nil {
		return nil, fmt.Errorf("pricingQuery ä¸èƒ½ä¸ºç©º")
	}

	s := &Service{
		chainQuery:    chainQuery,
		blockQuery:    blockQuery,
		txQuery:       txQuery,
		utxoQuery:     utxoQuery,
		resourceQuery: resourceQuery,
		accountQuery:  accountQuery,
		pricingQuery:  pricingQuery,
		logger:        logger,
	}

	if logger != nil {
		logger.Info("âœ… QueryService ç»Ÿä¸€æŸ¥è¯¢æœåŠ¡å·²åˆ›å»º")
	}

	return s, nil
}

// ========================================
// ChainQuery æ¥å£å®ç°ï¼ˆå§”æ‰˜ï¼‰
// ========================================

func (s *Service) GetChainInfo(ctx context.Context) (*types.ChainInfo, error) {
	return s.chainQuery.GetChainInfo(ctx)
}

func (s *Service) GetCurrentHeight(ctx context.Context) (uint64, error) {
	return s.chainQuery.GetCurrentHeight(ctx)
}

func (s *Service) GetBestBlockHash(ctx context.Context) ([]byte, error) {
	return s.chainQuery.GetBestBlockHash(ctx)
}

func (s *Service) GetNodeMode(ctx context.Context) (types.NodeMode, error) {
	return s.chainQuery.GetNodeMode(ctx)
}

func (s *Service) IsDataFresh(ctx context.Context) (bool, error) {
	return s.chainQuery.IsDataFresh(ctx)
}

func (s *Service) IsReady(ctx context.Context) (bool, error) {
	return s.chainQuery.IsReady(ctx)
}

func (s *Service) GetSyncStatus(ctx context.Context) (*types.SystemSyncStatus, error) {
	return s.chainQuery.GetSyncStatus(ctx)
}

// ========================================
// BlockQuery æ¥å£å®ç°ï¼ˆå§”æ‰˜ï¼‰
// ========================================

func (s *Service) GetBlockByHeight(ctx context.Context, height uint64) (*core.Block, error) {
	return s.blockQuery.GetBlockByHeight(ctx, height)
}

func (s *Service) GetBlockByHash(ctx context.Context, blockHash []byte) (*core.Block, error) {
	return s.blockQuery.GetBlockByHash(ctx, blockHash)
}

func (s *Service) GetBlockHeader(ctx context.Context, blockHash []byte) (*core.BlockHeader, error) {
	return s.blockQuery.GetBlockHeader(ctx, blockHash)
}

func (s *Service) GetBlockRange(ctx context.Context, startHeight, endHeight uint64) ([]*core.Block, error) {
	return s.blockQuery.GetBlockRange(ctx, startHeight, endHeight)
}

func (s *Service) GetHighestBlock(ctx context.Context) (height uint64, blockHash []byte, err error) {
	return s.blockQuery.GetHighestBlock(ctx)
}

// ========================================
// TxQuery æ¥å£å®ç°ï¼ˆå§”æ‰˜ï¼‰
// ========================================

func (s *Service) GetTransaction(ctx context.Context, txHash []byte) (blockHash []byte, txIndex uint32, tx *transaction.Transaction, err error) {
	return s.txQuery.GetTransaction(ctx, txHash)
}

func (s *Service) GetTxBlockHeight(ctx context.Context, txHash []byte) (uint64, error) {
	return s.txQuery.GetTxBlockHeight(ctx, txHash)
}

func (s *Service) GetBlockTimestamp(ctx context.Context, height uint64) (int64, error) {
	return s.txQuery.GetBlockTimestamp(ctx, height)
}

func (s *Service) GetAccountNonce(ctx context.Context, address []byte) (uint64, error) {
	return s.txQuery.GetAccountNonce(ctx, address)
}

func (s *Service) GetTransactionsByBlock(ctx context.Context, blockHash []byte) ([]*transaction.Transaction, error) {
	return s.txQuery.GetTransactionsByBlock(ctx, blockHash)
}

// ========================================
// UTXOQuery æ¥å£å®ç°ï¼ˆå§”æ‰˜ï¼‰
// ========================================

func (s *Service) GetUTXO(ctx context.Context, outpoint *transaction.OutPoint) (*utxo.UTXO, error) {
	return s.utxoQuery.GetUTXO(ctx, outpoint)
}

func (s *Service) GetUTXOsByAddress(ctx context.Context, address []byte, category *utxo.UTXOCategory, onlyAvailable bool) ([]*utxo.UTXO, error) {
	return s.utxoQuery.GetUTXOsByAddress(ctx, address, category, onlyAvailable)
}

func (s *Service) GetSponsorPoolUTXOs(ctx context.Context, onlyAvailable bool) ([]*utxo.UTXO, error) {
	return s.utxoQuery.GetSponsorPoolUTXOs(ctx, onlyAvailable)
}

func (s *Service) GetCurrentStateRoot(ctx context.Context) ([]byte, error) {
	return s.utxoQuery.GetCurrentStateRoot(ctx)
}

// ========================================
// ResourceQuery æ¥å£å®ç°ï¼ˆå§”æ‰˜ï¼‰
// ========================================

func (s *Service) GetResourceByContentHash(ctx context.Context, contentHash []byte) (*pb_resource.Resource, error) {
	return s.resourceQuery.GetResourceByContentHash(ctx, contentHash)
}

func (s *Service) GetResourceFromBlockchain(ctx context.Context, contentHash []byte) (*pb_resource.Resource, bool, error) {
	return s.resourceQuery.GetResourceFromBlockchain(ctx, contentHash)
}

func (s *Service) GetResourceTransaction(ctx context.Context, contentHash []byte) (txHash, blockHash []byte, blockHeight uint64, err error) {
	return s.resourceQuery.GetResourceTransaction(ctx, contentHash)
}

func (s *Service) CheckFileExists(contentHash []byte) bool {
	return s.resourceQuery.CheckFileExists(contentHash)
}

func (s *Service) BuildFilePath(contentHash []byte) string {
	return s.resourceQuery.BuildFilePath(contentHash)
}

func (s *Service) ListResourceHashes(ctx context.Context, offset int, limit int) ([][]byte, error) {
	return s.resourceQuery.ListResourceHashes(ctx, offset, limit)
}

// ========================================
// AccountQuery æ¥å£å®ç°ï¼ˆå§”æ‰˜ï¼‰
// ========================================

func (s *Service) GetAccountBalance(ctx context.Context, address []byte, tokenID []byte) (*types.BalanceInfo, error) {
	return s.accountQuery.GetAccountBalance(ctx, address, tokenID)
}

// ========================================
// PricingQuery æ¥å£å®ç°ï¼ˆå§”æ‰˜ï¼‰
// ========================================

// GetPricingState æ ¹æ®èµ„æºå“ˆå¸ŒæŸ¥è¯¢å®šä»·çŠ¶æ€ï¼ˆPhase 2ï¼‰
func (s *Service) GetPricingState(ctx context.Context, resourceHash []byte) (*types.ResourcePricingState, error) {
	return s.pricingQuery.GetPricingState(ctx, resourceHash)
}

// ç¼–è¯‘æ—¶æ£€æŸ¥æ¥å£å®ç°
var _ interfaces.InternalQueryService = (*Service)(nil)
