// Package writer å®ç°å†å²äº¤æ˜“ç´¢å¼•å†™å…¥é€»è¾‘
//
// ğŸ“œ **å†å²äº¤æ˜“ç´¢å¼•å†™å…¥ (Transaction History Index Writing)**
//
// æœ¬æ–‡ä»¶å®ç°å†å²äº¤æ˜“ç´¢å¼•çš„å†™å…¥é€»è¾‘ï¼Œç”¨äºæ”¯æŒé«˜æ•ˆçš„å†å²äº¤æ˜“æŸ¥è¯¢ã€‚
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - è®°å½•èµ„æºçš„å†å²äº¤æ˜“ï¼ˆå¼•ç”¨ã€å‡çº§ï¼‰
// - è®°å½•UTXOçš„å†å²äº¤æ˜“ï¼ˆå¼•ç”¨ã€æ¶ˆè´¹ï¼‰
// - æ”¯æŒæŒ‰èµ„æº/UTXOæŸ¥è¯¢æ‰€æœ‰ç›¸å…³äº¤æ˜“
//
// âš ï¸ **å…³é”®åŸåˆ™**ï¼š
// - ç´¢å¼•åªå­˜å‚¨äº¤æ˜“å“ˆå¸Œï¼Œä¸é‡å¤å­˜å‚¨äº¤æ˜“æ•°æ®
// - äº¤æ˜“æ•°æ®å¯ä»¥ä»åŒºå—ä¸­æå–
// - ç´¢å¼•æ ¼å¼ï¼š{key} â†’ äº¤æ˜“å“ˆå¸Œåˆ—è¡¨ï¼ˆå˜é•¿ï¼Œæ¯32å­—èŠ‚ä¸€ä¸ªå“ˆå¸Œï¼‰
package writer

import (
	"context"
	"encoding/binary"
	"fmt"

	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxo "github.com/weisyn/v1/pb/blockchain/utxo"
	"google.golang.org/protobuf/proto"
)

// writeResourceHistoryIndices å†™å…¥èµ„æºå†å²äº¤æ˜“ç´¢å¼•
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// è®°å½•æ‰€æœ‰ä¸èµ„æºç›¸å…³çš„äº¤æ˜“ï¼ˆå¼•ç”¨ã€å‡çº§ï¼‰ï¼Œç”¨äºå¿«é€ŸæŸ¥è¯¢èµ„æºå†å²ã€‚
//
// ğŸ“‹ **å¤„ç†æµç¨‹**ï¼š
// 1. éå†åŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
// 2. æ£€æŸ¥äº¤æ˜“è¾“å…¥ï¼šå¦‚æœå¼•ç”¨äº†èµ„æºUTXOï¼Œä»UTXOçš„cached_outputä¸­æå–contentHashï¼Œè®°å½•åˆ°èµ„æºå†å²ç´¢å¼•
// 3. æ£€æŸ¥äº¤æ˜“è¾“å…¥ï¼šå¦‚æœæ¶ˆè´¹äº†èµ„æºUTXOï¼Œè®°å½•ä¸ºå‡çº§äº¤æ˜“
// 4. æ£€æŸ¥äº¤æ˜“è¾“å‡ºï¼šå¦‚æœåˆ›å»ºäº†æ–°èµ„æºï¼Œè®°å½•ä¸ºéƒ¨ç½²äº¤æ˜“ï¼ˆå·²åœ¨writeResourceIndicesä¸­å¤„ç†ï¼‰
//
// âš ï¸ **ç´¢å¼•æ ¼å¼**ï¼š
// - é”®ï¼š`indices:resource:history:{contentHash}`
// - å€¼ï¼šäº¤æ˜“å“ˆå¸Œåˆ—è¡¨ï¼ˆå˜é•¿ï¼Œæ¯32å­—èŠ‚ä¸€ä¸ªäº¤æ˜“å“ˆå¸Œï¼‰+ æœ€åæ›´æ–°é«˜åº¦ï¼ˆ8å­—èŠ‚ï¼‰
// - è¿½åŠ æ¨¡å¼ï¼šæ–°äº¤æ˜“å“ˆå¸Œè¿½åŠ åˆ°åˆ—è¡¨æœ«å°¾
//
// âš ï¸ **è°ƒç”¨æ—¶æœº**ï¼š
// å¿…é¡»åœ¨ writeUTXOChanges ä¹‹å‰è°ƒç”¨ï¼Œå› ä¸ºæ¶ˆè´¹å‹è¾“å…¥ä¼šåˆ é™¤UTXOï¼Œéœ€è¦åœ¨åˆ é™¤å‰æå–èµ„æºä¿¡æ¯
func (s *Service) writeResourceHistoryIndices(ctx context.Context, tx storage.BadgerTransaction, block *core.Block) error {
	if s.txHashClient == nil {
		return fmt.Errorf("txHashClient æœªåˆå§‹åŒ–")
	}

	transactions := block.Body.Transactions
	if transactions == nil {
		return nil
	}

	// éå†åŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
	for i, txProto := range transactions {
		// è®¡ç®—äº¤æ˜“å“ˆå¸Œ
		txReq := &transaction.ComputeHashRequest{
			Transaction: txProto,
		}
		txResp, err := s.txHashClient.ComputeHash(ctx, txReq)
		if err != nil {
			return fmt.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥ï¼ˆäº¤æ˜“ %dï¼‰: %w", i, err)
		}

		if !txResp.IsValid {
			return fmt.Errorf("äº¤æ˜“ %d ç»“æ„æ— æ•ˆ", i)
		}

		txHash := txResp.Hash

		// 1. æ£€æŸ¥äº¤æ˜“è¾“å…¥ï¼šæŸ¥æ‰¾èµ„æºUTXOçš„å¼•ç”¨å’Œæ¶ˆè´¹
		for _, input := range txProto.Inputs {
			if input.PreviousOutput == nil {
				continue
			}

			// æŸ¥è¯¢è¢«å¼•ç”¨çš„UTXOï¼ˆåœ¨writeUTXOChangesä¹‹å‰è°ƒç”¨ï¼ŒUTXOè¿˜æœªè¢«åˆ é™¤ï¼‰
			utxoKey := fmt.Sprintf("utxo:set:%x:%d", input.PreviousOutput.TxId, input.PreviousOutput.OutputIndex)
			utxoData, err := tx.Get([]byte(utxoKey))
			if err != nil || utxoData == nil || len(utxoData) == 0 {
				// UTXOä¸å­˜åœ¨ï¼Œè·³è¿‡ï¼ˆå¯èƒ½æ˜¯å·²æ¶ˆè´¹çš„UTXOï¼Œæˆ–è€…UTXOè¿˜æœªåˆ›å»ºï¼‰
				continue
			}

			// ååºåˆ—åŒ–UTXO
			utxoObj := &utxo.UTXO{}
			if err := proto.Unmarshal(utxoData, utxoObj); err != nil {
				continue // è·³è¿‡æ— æ•ˆçš„UTXOæ•°æ®
			}

			// æ£€æŸ¥æ˜¯å¦æ˜¯èµ„æºUTXO
			if utxoObj.Category != utxo.UTXOCategory_UTXO_CATEGORY_RESOURCE {
				continue
			}

			// ä»UTXOçš„cached_outputä¸­æå–èµ„æºä¿¡æ¯
			cachedOutput := utxoObj.GetCachedOutput()
			if cachedOutput == nil {
				continue
			}

			resourceOutput := cachedOutput.GetResource()
			if resourceOutput == nil || resourceOutput.Resource == nil {
				continue
			}

			contentHash := resourceOutput.Resource.ContentHash
			if len(contentHash) != 32 {
				continue
			}

			// æ„å»ºèµ„æºå†å²ç´¢å¼•é”®
			historyKey := fmt.Sprintf("indices:resource:history:%x", contentHash)

			// è¿½åŠ äº¤æ˜“å“ˆå¸Œåˆ°èµ„æºå†å²ç´¢å¼•
			if err := s.appendToHistoryIndex(ctx, tx, historyKey, txHash, block.Header.Height); err != nil {
				return fmt.Errorf("å†™å…¥èµ„æºå†å²ç´¢å¼•å¤±è´¥ï¼ˆäº¤æ˜“ %dï¼‰: %w", i, err)
			}
		}

		// 2. æ£€æŸ¥äº¤æ˜“è¾“å‡ºï¼šæŸ¥æ‰¾èµ„æºåˆ›å»ºï¼ˆéƒ¨ç½²äº¤æ˜“å·²åœ¨writeResourceIndicesä¸­å¤„ç†ï¼‰
		// è¿™é‡Œä¸»è¦å¤„ç†èµ„æºå‡çº§ï¼šå¦‚æœè¾“å‡ºåˆ›å»ºäº†æ–°èµ„æºï¼Œä¸”è¾“å…¥æ¶ˆè´¹äº†æ—§èµ„æºï¼Œè®°å½•ä¸ºå‡çº§
		// æ³¨æ„ï¼šèµ„æºå‡çº§çš„åˆ¤æ–­éœ€è¦æ¯”è¾ƒæ–°æ—§èµ„æºçš„contentHashï¼Œè¿™é‡Œå…ˆè®°å½•æ‰€æœ‰èµ„æºåˆ›å»ºäº¤æ˜“
		for _, output := range txProto.Outputs {
			if output == nil {
				continue
			}

			resourceOutput := output.GetResource()
			if resourceOutput == nil || resourceOutput.Resource == nil {
				continue
			}

			contentHash := resourceOutput.Resource.ContentHash
			if len(contentHash) != 32 {
				continue
			}

			// éƒ¨ç½²äº¤æ˜“å·²åœ¨writeResourceIndicesä¸­å¤„ç†ï¼Œè¿™é‡Œåªå¤„ç†å‡çº§åœºæ™¯
			// å‡çº§åˆ¤æ–­ï¼šå¦‚æœè¾“å…¥ä¸­æœ‰èµ„æºUTXOè¢«æ¶ˆè´¹ï¼Œä¸”è¾“å‡ºçš„contentHashä¸åŒï¼Œåˆ™ä¸ºå‡çº§
			// ç®€åŒ–å®ç°ï¼šå…ˆè®°å½•æ‰€æœ‰èµ„æºåˆ›å»ºäº¤æ˜“ï¼Œåç»­å¯ä»¥åœ¨æŸ¥è¯¢æ—¶åˆ¤æ–­æ˜¯å¦ä¸ºå‡çº§
		}
	}

	return nil
}

// appendToHistoryIndex è¿½åŠ äº¤æ˜“å“ˆå¸Œåˆ°å†å²ç´¢å¼•
//
// ğŸ“‹ **å¤„ç†æµç¨‹**ï¼š
// 1. è¯»å–ç°æœ‰ç´¢å¼•å€¼ï¼ˆå¦‚æœå­˜åœ¨ï¼‰
// 2. æ£€æŸ¥äº¤æ˜“å“ˆå¸Œæ˜¯å¦å·²å­˜åœ¨ï¼ˆå»é‡ï¼‰
// 3. è¿½åŠ æ–°äº¤æ˜“å“ˆå¸Œ
// 4. å†™å›ç´¢å¼•
func (s *Service) appendToHistoryIndex(
	ctx context.Context,
	tx storage.BadgerTransaction,
	indexKey string,
	txHash []byte,
	blockHeight uint64,
) error {
	if len(txHash) != 32 {
		return fmt.Errorf("äº¤æ˜“å“ˆå¸Œé•¿åº¦æ— æ•ˆ: %d", len(txHash))
	}

	// è¯»å–ç°æœ‰ç´¢å¼•å€¼
	existingData, err := tx.Get([]byte(indexKey))
	if err != nil {
		return fmt.Errorf("è¯»å–å†å²ç´¢å¼•å¤±è´¥: %w", err)
	}

	// æ£€æŸ¥æ˜¯å¦å·²å­˜åœ¨ï¼ˆå»é‡ï¼‰
	if existingData != nil && len(existingData) > 0 {
		// è§£æç°æœ‰æ•°æ®ï¼šæ¯32å­—èŠ‚ä¸€ä¸ªäº¤æ˜“å“ˆå¸Œï¼Œæœ€å8å­—èŠ‚æ˜¯æœ€åæ›´æ–°çš„åŒºå—é«˜åº¦
		if len(existingData) >= 8 {
			lastHeight := binary.BigEndian.Uint64(existingData[len(existingData)-8:])
			// å¦‚æœå½“å‰åŒºå—é«˜åº¦å°äºç­‰äºæœ€åæ›´æ–°é«˜åº¦ï¼Œè¯´æ˜ç´¢å¼•å·²æ›´æ–°è¿‡ï¼Œè·³è¿‡
			if blockHeight <= lastHeight {
				return nil
			}

			// æ£€æŸ¥äº¤æ˜“å“ˆå¸Œæ˜¯å¦å·²å­˜åœ¨
			txHashes := existingData[:len(existingData)-8] // æ’é™¤æœ€å8å­—èŠ‚çš„é«˜åº¦ä¿¡æ¯
			for i := 0; i < len(txHashes); i += 32 {
				if i+32 <= len(txHashes) {
					existingHash := txHashes[i : i+32]
					if string(existingHash) == string(txHash) {
						// å·²å­˜åœ¨ï¼Œè·³è¿‡
						return nil
					}
				}
			}
		}
	}

	// è¿½åŠ æ–°äº¤æ˜“å“ˆå¸Œå’ŒåŒºå—é«˜åº¦
	newData := make([]byte, 0)
	if existingData != nil && len(existingData) >= 8 {
		// ä¿ç•™ç°æœ‰äº¤æ˜“å“ˆå¸Œï¼ˆæ’é™¤æœ€å8å­—èŠ‚çš„é«˜åº¦ä¿¡æ¯ï¼‰
		newData = append(newData, existingData[:len(existingData)-8]...)
	}
	newData = append(newData, txHash...)
	// è¿½åŠ æœ€åæ›´æ–°çš„åŒºå—é«˜åº¦ï¼ˆ8å­—èŠ‚ï¼‰
	heightBytes := make([]byte, 8)
	binary.BigEndian.PutUint64(heightBytes, blockHeight)
	newData = append(newData, heightBytes...)

	// å†™å›ç´¢å¼•
	if err := tx.Set([]byte(indexKey), newData); err != nil {
		return fmt.Errorf("å†™å…¥å†å²ç´¢å¼•å¤±è´¥: %w", err)
	}

	return nil
}

// writeUTXOHistoryIndices å†™å…¥UTXOå†å²äº¤æ˜“ç´¢å¼•
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// è®°å½•æ‰€æœ‰å¼•ç”¨æˆ–æ¶ˆè´¹ç‰¹å®šUTXOçš„äº¤æ˜“ï¼Œç”¨äºå¿«é€ŸæŸ¥è¯¢UTXOå†å²ã€‚
//
// ğŸ“‹ **å¤„ç†æµç¨‹**ï¼š
// 1. éå†åŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
// 2. æ£€æŸ¥äº¤æ˜“è¾“å…¥ï¼šå¦‚æœå¼•ç”¨äº†UTXOï¼Œè®°å½•åˆ°UTXOå†å²ç´¢å¼•
// 3. æ£€æŸ¥äº¤æ˜“è¾“å…¥ï¼šå¦‚æœæ¶ˆè´¹äº†UTXOï¼Œè®°å½•åˆ°UTXOå†å²ç´¢å¼•
//
// âš ï¸ **ç´¢å¼•æ ¼å¼**ï¼š
// - é”®ï¼š`indices:utxo:history:{txId}:{outputIndex}`
// - å€¼ï¼šäº¤æ˜“å“ˆå¸Œåˆ—è¡¨ï¼ˆå˜é•¿ï¼Œæ¯32å­—èŠ‚ä¸€ä¸ªäº¤æ˜“å“ˆå¸Œï¼‰+ æœ€åæ›´æ–°é«˜åº¦ï¼ˆ8å­—èŠ‚ï¼‰
func (s *Service) writeUTXOHistoryIndices(ctx context.Context, tx storage.BadgerTransaction, block *core.Block) error {
	if s.txHashClient == nil {
		return fmt.Errorf("txHashClient æœªåˆå§‹åŒ–")
	}

	transactions := block.Body.Transactions
	if transactions == nil {
		return nil
	}

	// éå†åŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
	for i, txProto := range transactions {
		// è®¡ç®—äº¤æ˜“å“ˆå¸Œ
		txReq := &transaction.ComputeHashRequest{
			Transaction: txProto,
		}
		txResp, err := s.txHashClient.ComputeHash(ctx, txReq)
		if err != nil {
			return fmt.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥ï¼ˆäº¤æ˜“ %dï¼‰: %w", i, err)
		}

		if !txResp.IsValid {
			return fmt.Errorf("äº¤æ˜“ %d ç»“æ„æ— æ•ˆ", i)
		}

		txHash := txResp.Hash

		// æ£€æŸ¥äº¤æ˜“è¾“å…¥ï¼šè®°å½•æ‰€æœ‰å¼•ç”¨çš„UTXO
		for _, input := range txProto.Inputs {
			if input.PreviousOutput == nil {
				continue
			}

			// æ„å»ºUTXOå†å²ç´¢å¼•é”®
			historyKey := fmt.Sprintf("indices:utxo:history:%x:%d",
				input.PreviousOutput.TxId,
				input.PreviousOutput.OutputIndex)

			// è¿½åŠ äº¤æ˜“å“ˆå¸Œåˆ°å†å²ç´¢å¼•
			if err := s.appendToHistoryIndex(ctx, tx, historyKey, txHash, block.Header.Height); err != nil {
				return fmt.Errorf("å†™å…¥UTXOå†å²ç´¢å¼•å¤±è´¥ï¼ˆäº¤æ˜“ %dï¼‰: %w", i, err)
			}
		}
	}

	return nil
}

