// Package writer å®ç°èµ„æºç´¢å¼•æ›´æ–°é€»è¾‘
//
// ğŸ“ **èµ„æºç´¢å¼•æ›´æ–° (Resource Index Update)**
//
// æœ¬æ–‡ä»¶å®ç°èµ„æºç´¢å¼•çš„æ›´æ–°é€»è¾‘ï¼Œæ‰«æåŒºå—ä¸­çš„èµ„æºç›¸å…³äº¤æ˜“å¹¶æ›´æ–°ç´¢å¼•ã€‚
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - æ‰«æåŒºå—ä¸­çš„èµ„æºç›¸å…³äº¤æ˜“
// - æ›´æ–°èµ„æºç´¢å¼•ï¼ˆcontentHash â†’ txHashï¼‰
//
// âš ï¸ **å…³é”®åŸåˆ™**ï¼š
// - èµ„æºæ–‡ä»¶å­˜å‚¨åœ¨æ–‡ä»¶ç³»ç»Ÿä¸­ï¼ˆç”± ResourceWriter è´Ÿè´£ï¼‰
// - èµ„æºç´¢å¼•å­˜å‚¨åœ¨ BadgerDB ä¸­ï¼ˆç”± DataWriter ç»Ÿä¸€å¤„ç†ï¼‰
// - ç´¢å¼•æ ¼å¼ï¼šindices:resource:{contentHash} â†’ (txHash, blockHash, blockHeight)
package writer

import (
	"context"
	"encoding/json"
	"fmt"

	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/eutxo"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
)

// writeResourceIndices æ›´æ–°èµ„æºç´¢å¼•
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// æ‰«æåŒºå—ä¸­çš„èµ„æºç›¸å…³äº¤æ˜“ï¼Œæ›´æ–°èµ„æºç´¢å¼•ã€‚
//
// ğŸ“‹ **å¤„ç†æµç¨‹**ï¼š
// 1. éå†åŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
// 2. è¯†åˆ«èµ„æºç›¸å…³äº¤æ˜“ï¼ˆåŒ…å« ResourceOutput çš„äº¤æ˜“ï¼‰
// 3. æå–èµ„æºå†…å®¹å“ˆå¸Œï¼ˆä» ResourceOutput.Resource.ContentHashï¼‰
// 4. æ›´æ–°èµ„æºç´¢å¼•ï¼ˆindices:resource:{contentHash} â†’ txHash + blockHash + blockHeightï¼‰
//
// âš ï¸ **æ³¨æ„äº‹é¡¹**ï¼š
// - èµ„æºæ–‡ä»¶å­˜å‚¨åœ¨æ–‡ä»¶ç³»ç»Ÿä¸­ï¼ˆç”± ResourceWriter.StoreResourceFile() è´Ÿè´£ï¼‰
// - åªæ›´æ–°èµ„æºç´¢å¼•ï¼ˆç»Ÿä¸€ç”± DataWriter åœ¨äº‹åŠ¡ä¸­å¤„ç†ï¼‰
// - ç´¢å¼•æ ¼å¼ï¼šindices:resource:{contentHash} â†’ txHash(32å­—èŠ‚) + blockHash(32å­—èŠ‚) + blockHeight(8å­—èŠ‚)
func (s *Service) writeResourceIndices(ctx context.Context, tx storage.BadgerTransaction, block *core.Block) error {
	transactions := block.Body.Transactions
	if transactions == nil {
		return nil
	}

	// è®¡ç®—åŒºå—å“ˆå¸Œï¼ˆç”¨äºèµ„æºç´¢å¼•ï¼Œä½¿ç”¨ gRPC æœåŠ¡ï¼‰
	if s.blockHashClient == nil {
		return fmt.Errorf("blockHashClient æœªåˆå§‹åŒ–")
	}
	blockReq := &core.ComputeBlockHashRequest{
		Block: block,
	}
	blockResp, err := s.blockHashClient.ComputeBlockHash(ctx, blockReq)
	if err != nil {
		return fmt.Errorf("è®¡ç®—åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
	}
	if !blockResp.IsValid {
		return fmt.Errorf("åŒºå—ç»“æ„æ— æ•ˆ")
	}
	blockHash := blockResp.Hash

	// éå†åŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
	for i, txProto := range transactions {
		// è®¡ç®—äº¤æ˜“å“ˆå¸Œï¼ˆä½¿ç”¨ gRPC æœåŠ¡ï¼‰
		if s.txHashClient == nil {
			return fmt.Errorf("txHashClient æœªåˆå§‹åŒ–")
		}
		txReq := &transaction.ComputeHashRequest{
			Transaction: txProto,
		}
		txResp, err := s.txHashClient.ComputeHash(ctx, txReq)
		if err != nil {
			return fmt.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥ï¼ˆäº¤æ˜“ %dï¼‰: %w", i, err)
		}
		if !txResp.IsValid {
			return fmt.Errorf("äº¤æ˜“ %d ç»“æ„æ— æ•ˆ", i)
		}
		txHash := txResp.Hash

		// éå†äº¤æ˜“è¾“å‡ºï¼ŒæŸ¥æ‰¾ ResourceOutput
		for j, output := range txProto.Outputs {
			if output == nil {
				continue
			}

			// æ£€æŸ¥æ˜¯å¦æ˜¯ ResourceOutputï¼ˆä½¿ç”¨ GetResource() æ–¹æ³•ï¼‰
			resourceOutput := output.GetResource()
			if resourceOutput == nil {
				continue
			}

			// æå–èµ„æºå†…å®¹å“ˆå¸Œ
			if resourceOutput.Resource == nil {
				continue
			}

			contentHash := resourceOutput.Resource.ContentHash
			if len(contentHash) == 0 {
				// å¦‚æœæ²¡æœ‰å†…å®¹å“ˆå¸Œï¼Œè·³è¿‡
				continue
			}

			// ç¼–ç èµ„æºç´¢å¼•å€¼ï¼štxHash(32å­—èŠ‚) + blockHash(32å­—èŠ‚) + blockHeight(8å­—èŠ‚)
			indexValue := make([]byte, 32+32+8)
			copy(indexValue[0:32], txHash)
			copy(indexValue[32:64], blockHash)
			copy(indexValue[64:72], uint64ToBytes(block.Header.Height))

			// ========== Phase 4: å½»åº•è¿­ä»£ - ç§»é™¤æ—§ç´¢å¼•ï¼Œåªä½¿ç”¨å®ä¾‹ç´¢å¼• ==========
			// âš ï¸ **å½»åº•è¿­ä»£**ï¼šä¸å†å†™å…¥ indices:resource:{contentHash}ï¼Œåªå†™å…¥å®ä¾‹ç´¢å¼•
			// å®ä¾‹ç´¢å¼•çš„å†™å…¥åœ¨ writeResourceUTXOIndex ä¸­å®Œæˆ

			// åŒæ­¥æ›´æ–° Resource UTXO ç´¢å¼•ï¼ˆåŸºäº ResourceInstanceIdï¼‰
			// ä»¥ UTXO ä¸ºçœŸç›¸ï¼šåŸºäºå½“å‰äº¤æ˜“è¾“å‡ºæ„å»º ResourceUTXORecordã€‚
			if err := s.writeResourceUTXOIndex(ctx, tx, txHash, uint32(j), output, resourceOutput, blockHash, block.Header.Height, block.Header.Timestamp); err != nil {
				return fmt.Errorf("æ›´æ–° ResourceUTXO ç´¢å¼•å¤±è´¥ï¼ˆäº¤æ˜“ %dï¼Œè¾“å‡º %dï¼‰: %w", i, j, err)
			}
		}
	}

	if s.logger != nil {
		s.logger.Debugf("âœ… èµ„æºç´¢å¼•å·²æ›´æ–°: height=%d",
			block.Header.Height)
	}

	return nil
}

// writeResourceUTXOIndex æ›´æ–°èµ„æº UTXO ç´¢å¼•ï¼ˆresource:utxo:* + resource:counters:* + index:resource:owner:*ï¼‰
func (s *Service) writeResourceUTXOIndex(
	ctx context.Context,
	tx storage.BadgerTransaction,
	txHash []byte,
	outputIndex uint32,
	output *transaction.TxOutput,
	resourceOutput *transaction.ResourceOutput,
	blockHash []byte,
	blockHeight uint64,
	blockTimestamp uint64,
) error {
	resource := resourceOutput.Resource
	if resource == nil {
		return fmt.Errorf("ResourceOutput.resource ä¸èƒ½ä¸ºç©º")
	}

	codeHash := resource.ContentHash
	if len(codeHash) != 32 {
		return fmt.Errorf("codeHash å¿…é¡»æ˜¯ 32 å­—èŠ‚ï¼Œå®é™…: %d", len(codeHash))
	}

	// ========== Phase 4: å½»åº•è¿­ä»£ - åªä½¿ç”¨æ–°ç´¢å¼•ï¼ˆå®ä¾‹ç»´åº¦ï¼‰==========
	// âš ï¸ **å½»åº•è¿­ä»£**ï¼šç§»é™¤æ‰€æœ‰æ—§ç´¢å¼•ï¼Œåªä¿ç•™åŸºäº ResourceInstanceId çš„æ–°ç´¢å¼•

	// 1. æ„å»ºèµ„æºå®ä¾‹æ ‡è¯†ç¬¦å’Œä»£ç æ ‡è¯†ç¬¦
	instanceID := eutxo.NewResourceInstanceID(txHash, outputIndex)
	codeID := eutxo.NewResourceCodeID(codeHash)

	// 2. æ„å»º ResourceUTXORecordï¼ˆä½¿ç”¨æ–°ç±»å‹ï¼‰
	record := &eutxo.ResourceUTXORecord{
		InstanceID:        instanceID,
		CodeID:            codeID,
		Owner:             output.Owner,
		Status:            eutxo.ResourceUTXOStatusActive,
		CreationTimestamp: resourceOutput.CreationTimestamp,
		IsImmutable:       resourceOutput.IsImmutable,
	}

	if resourceOutput.ExpiryTimestamp != nil && *resourceOutput.ExpiryTimestamp > 0 {
		expiry := *resourceOutput.ExpiryTimestamp
		record.ExpiryTimestamp = &expiry
		if blockTimestamp >= expiry {
			record.Status = eutxo.ResourceUTXOStatusExpired
		}
	}

	// ç¡®ä¿å‘åå…¼å®¹å­—æ®µè¢«å¡«å……ï¼ˆç”¨äºåºåˆ—åŒ–ï¼‰
	record.EnsureBackwardCompatibility()

	// 3. å®ä¾‹ä¸»ç´¢å¼•ï¼šindices:resource-instance:{instanceID} -> {blockHash, blockHeight, codeID}
	instanceIndexKey := fmt.Sprintf("indices:resource-instance:%s", instanceID.Encode())
	instanceIndexValue := make([]byte, 72) // blockHash(32) + blockHeight(8) + codeID(32)
	copy(instanceIndexValue[0:32], blockHash)
	copy(instanceIndexValue[32:40], uint64ToBytes(blockHeight))
	copy(instanceIndexValue[40:72], codeID.Bytes())
	if err := tx.Set([]byte(instanceIndexKey), instanceIndexValue); err != nil {
		return fmt.Errorf("å­˜å‚¨èµ„æºå®ä¾‹ç´¢å¼•å¤±è´¥: %w", err)
	}

	// 4. å®ä¾‹ UTXO è®°å½•ï¼šresource:utxo-instance:{instanceID} -> ResourceUTXORecord
	instanceRecordKey := fmt.Sprintf("resource:utxo-instance:%s", instanceID.Encode())
	recordData, err := json.Marshal(record)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ– ResourceUTXORecord å¤±è´¥: %w", err)
	}
	if err := tx.Set([]byte(instanceRecordKey), recordData); err != nil {
		return fmt.Errorf("å­˜å‚¨ ResourceUTXORecord å¤±è´¥: %w", err)
	}

	// 5. ä»£ç â†’å®ä¾‹ç´¢å¼•ï¼ˆ1:N å…³ç³»ï¼‰ï¼šindices:resource-code:{codeID} -> [instanceID1, instanceID2, ...]
	codeIndexKey := fmt.Sprintf("indices:resource-code:%x", codeID.Bytes())
	existingCodeData, _ := tx.Get([]byte(codeIndexKey))
	var instanceList []string
	if len(existingCodeData) > 0 {
		if err := json.Unmarshal(existingCodeData, &instanceList); err != nil {
			instanceList = []string{instanceID.Encode()}
		} else {
			// æ£€æŸ¥æ˜¯å¦å·²å­˜åœ¨
			found := false
			instanceIDStr := instanceID.Encode()
			for _, id := range instanceList {
				if id == instanceIDStr {
					found = true
					break
				}
			}
			if !found {
				instanceList = append(instanceList, instanceIDStr)
			}
		}
	} else {
		instanceList = []string{instanceID.Encode()}
	}
	codeIndexValue, err := json.Marshal(instanceList)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–ä»£ç â†’å®ä¾‹ç´¢å¼•å¤±è´¥: %w", err)
	}
	if err := tx.Set([]byte(codeIndexKey), codeIndexValue); err != nil {
		return fmt.Errorf("å­˜å‚¨ä»£ç â†’å®ä¾‹ç´¢å¼•å¤±è´¥: %w", err)
	}

	// 6. Owner ç´¢å¼•ï¼šindex:resource:owner-instance:{owner}:{instanceID} -> instanceID
	if len(output.Owner) > 0 {
		ownerIndexKey := fmt.Sprintf("index:resource:owner-instance:%x:%s", output.Owner, instanceID.Encode())
		if err := tx.Set([]byte(ownerIndexKey), []byte(instanceID.Encode())); err != nil {
			return fmt.Errorf("æ›´æ–° owner ç´¢å¼•å¤±è´¥: %w", err)
		}
	}

	// 7. ä½¿ç”¨è®¡æ•°ï¼šresource:counters-instance:{instanceID} -> ResourceUsageCounters
	countersKey := fmt.Sprintf("resource:counters-instance:%s", instanceID.Encode())
		counters := &eutxo.ResourceUsageCounters{
		InstanceID:            instanceID,
		CodeID:               codeID,
		CurrentReferenceCount: 0,
		TotalReferenceTimes:  0,
			LastReferenceBlockHeight: blockHeight,
			LastReferenceTimestamp:   blockTimestamp,
		}
	// ç¡®ä¿å‘åå…¼å®¹å­—æ®µè¢«å¡«å……
	counters.EnsureBackwardCompatibility()

	countersData, err := json.Marshal(counters)
		if err != nil {
			return fmt.Errorf("åºåˆ—åŒ– ResourceUsageCounters å¤±è´¥: %w", err)
		}
		if err := tx.Set([]byte(countersKey), countersData); err != nil {
			return fmt.Errorf("å­˜å‚¨ ResourceUsageCounters å¤±è´¥: %w", err)
	}

	return nil
}
