// Package persistence æä¾›ç»Ÿä¸€æŸ¥è¯¢æœåŠ¡çš„å…¬å…±æ¥å£å®šä¹‰
//
// ğŸ” **ç»Ÿä¸€æŸ¥è¯¢æœåŠ¡ (Unified Query Service)**
//
// æœ¬åŒ…å®šä¹‰ WES ç³»ç»Ÿçš„ CQRS è¯»è·¯å¾„ç»Ÿä¸€æŸ¥è¯¢æ¥å£ï¼Œæ‰€æœ‰æ¨¡å—çš„è¯»æ“ä½œéƒ½é€šè¿‡æ­¤æœåŠ¡ï¼Œ
// é¿å…å¾ªç¯ä¾èµ–ï¼Œå®ç°æ¸…æ™°çš„æ¶æ„è¾¹ç•Œã€‚
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - æä¾›ç»Ÿä¸€çš„æŸ¥è¯¢å…¥å£ï¼Œé¿å…æ¨¡å—é—´ç›¸äº’ä¾èµ–
// - æ”¯æŒç¼“å­˜ã€ç´¢å¼•ä¼˜åŒ–ç­‰æ€§èƒ½ä¼˜åŒ–
// - å¯è·¯ç”±åˆ°åªè¯»å‰¯æœ¬ï¼Œæå‡æŸ¥è¯¢æ€§èƒ½
//
// ğŸ—ï¸ **è®¾è®¡åŸåˆ™**ï¼š
// - CQRS æ¶æ„ï¼šæ‰€æœ‰è¯»æ“ä½œç»Ÿä¸€é€šè¿‡ QueryService
// - é¿å…å¾ªç¯ä¾èµ–ï¼šæ¨¡å—é—´ä¸ç›´æ¥æŸ¥è¯¢ï¼Œéƒ½é€šè¿‡ QueryService
// - æ€§èƒ½ä¼˜åŒ–ï¼šå†…éƒ¨å®ç°å¯ä»¥ç¼“å­˜ã€ç´¢å¼•ä¼˜åŒ–
// - å¯æ‰©å±•æ€§ï¼šå¯è·¯ç”±åˆ°åªè¯»å‰¯æœ¬
//
// ğŸ“‹ **æ ¸å¿ƒæ¥å£**ï¼š
// - QueryService: ç»Ÿä¸€æŸ¥è¯¢æœåŠ¡æ¥å£ï¼ˆç»„åˆæ‰€æœ‰é¢†åŸŸæŸ¥è¯¢æ¥å£ï¼‰
//
// ğŸ“ **æ¥å£ç»„ç»‡**ï¼š
// æ‰€æœ‰ Query æ¥å£ç»Ÿä¸€åœ¨æœ¬æ–‡ä»¶ä¸­ï¼ŒåŒ…æ‹¬ï¼š
// - ChainQuery - é“¾çŠ¶æ€æŸ¥è¯¢
// - BlockQuery - åŒºå—æŸ¥è¯¢
// - TxQuery - äº¤æ˜“æŸ¥è¯¢
// - UTXOQuery - EUTXOæŸ¥è¯¢
// - ResourceQuery - URESèµ„æºæŸ¥è¯¢
// - AccountQuery - è´¦æˆ·æŸ¥è¯¢ï¼ˆèšåˆè§†å›¾ï¼‰
// - PricingQuery - å®šä»·æŸ¥è¯¢ï¼ˆPhase 2ï¼Œå¯é€‰ï¼‰
//
// è¯¦ç»†ä½¿ç”¨è¯´æ˜è¯·å‚è€ƒï¼šdocs/components/infrastructure/persistence/
package persistence

import (
	"context"

	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	pb_resource "github.com/weisyn/v1/pb/blockchain/block/transaction/resource"
	utxo "github.com/weisyn/v1/pb/blockchain/utxo"
	"github.com/weisyn/v1/pkg/types"
)

// QueryService ç»Ÿä¸€æŸ¥è¯¢æœåŠ¡æ¥å£ï¼ˆCQRSè¯»è·¯å¾„ï¼‰
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// æ‰€æœ‰æ¨¡å—çš„è¯»æ“ä½œéƒ½é€šè¿‡æ­¤æœåŠ¡ï¼Œé¿å…å¾ªç¯ä¾èµ–ã€‚
// è¿™æ˜¯ WES ç³»ç»Ÿ CQRS æ¶æ„çš„æ ¸å¿ƒç»„ä»¶ï¼Œæä¾›ç»Ÿä¸€çš„æŸ¥è¯¢å…¥å£ã€‚
//
// ğŸ’¡ **è®¾è®¡ç†å¿µ**ï¼š
// - ç»Ÿä¸€æŸ¥è¯¢å…¥å£ï¼šæ‰€æœ‰æ¨¡å—çš„è¯»æ“ä½œéƒ½é€šè¿‡ QueryService
// - é¿å…å¾ªç¯ä¾èµ–ï¼šæ¨¡å—é—´ä¸ç›´æ¥æŸ¥è¯¢ï¼Œéƒ½é€šè¿‡ QueryService
// - æ€§èƒ½ä¼˜åŒ–ï¼šå†…éƒ¨å®ç°å¯ä»¥ç¼“å­˜ã€ç´¢å¼•ä¼˜åŒ–
// - å¯æ‰©å±•æ€§ï¼šå¯è·¯ç”±åˆ°åªè¯»å‰¯æœ¬
//
// ğŸ“ **è°ƒç”¨æ–¹**ï¼š
// - æ‰€æœ‰ä¸šåŠ¡æ¨¡å—ï¼ˆISPCã€URESã€EUTXOã€TXã€Blockã€Chainï¼‰
// - API æœåŠ¡å±‚
// - CLI å·¥å…·
//
// âš ï¸ **æ ¸å¿ƒçº¦æŸ**ï¼š
// - åªè¯»æ“ä½œï¼šæ‰€æœ‰æ–¹æ³•éƒ½æ˜¯æŸ¥è¯¢æ“ä½œï¼Œä¸ä¿®æ”¹çŠ¶æ€
// - çº¿ç¨‹å®‰å…¨ï¼šæ”¯æŒå¹¶å‘è°ƒç”¨
// - æ€§èƒ½è¦æ±‚ï¼šå…³é”®æŸ¥è¯¢æ–¹æ³•è¦æ±‚é«˜æ€§èƒ½å®ç°
//
// ğŸ—ï¸ **æ¥å£ç»„åˆ**ï¼š
// QueryService é€šè¿‡ç»„åˆæ‰€æœ‰é¢†åŸŸæŸ¥è¯¢æ¥å£ï¼Œæä¾›å®Œæ•´çš„æŸ¥è¯¢èƒ½åŠ›ï¼š
// - ChainQuery: é“¾çŠ¶æ€æŸ¥è¯¢
// - BlockQuery: åŒºå—æŸ¥è¯¢
// - TxQuery: äº¤æ˜“æŸ¥è¯¢
// - UTXOQuery: EUTXOæŸ¥è¯¢
// - ResourceQuery: URESèµ„æºæŸ¥è¯¢
// - AccountQuery: è´¦æˆ·æŸ¥è¯¢
type QueryService interface {
	// ç»„åˆæ‰€æœ‰é¢†åŸŸæŸ¥è¯¢æ¥å£
	ChainQuery
	BlockQuery
	TxQuery
	UTXOQuery
	ResourceQuery
	AccountQuery
	PricingQuery // Phase 2: å®šä»·æŸ¥è¯¢æ¥å£
}

// ChainQuery é“¾çŠ¶æ€æŸ¥è¯¢æ¥å£ï¼ˆQueryService çš„ç»„æˆéƒ¨åˆ†ï¼‰
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// æä¾›é“¾çŠ¶æ€çš„æŸ¥è¯¢æ“ä½œï¼Œä½œä¸º QueryService çš„ä¸€éƒ¨åˆ†ã€‚
//
// ğŸ’¡ **è®¾è®¡ç†å¿µ**ï¼š
// - åªåŒ…å«æŸ¥è¯¢æ“ä½œï¼Œä¸åŒ…å«å†™æ“ä½œ
// - ä½œä¸º QueryService çš„ç»„åˆæ¥å£
// - æä¾›é¢†åŸŸç‰¹å®šçš„æŸ¥è¯¢æ–¹æ³•
//
// ğŸ“ **è°ƒç”¨æ–¹**ï¼š
// - é€šè¿‡ QueryService è°ƒç”¨
// - æ‰€æœ‰éœ€è¦æŸ¥è¯¢é“¾çŠ¶æ€çš„ç»„ä»¶
type ChainQuery interface {
	// GetChainInfo è·å–é“¾åŸºç¡€ä¿¡æ¯
	//
	// è¿”å›é“¾çš„åŸºç¡€çŠ¶æ€ï¼ŒåŒ…æ‹¬ï¼š
	// - å½“å‰é«˜åº¦å’Œæœ€ä½³åŒºå—å“ˆå¸Œ
	// - åŒæ­¥çŠ¶æ€ï¼ˆæ˜¯å¦ä¸ç½‘ç»œåŒæ­¥ï¼‰
	// - èŠ‚ç‚¹æ¨¡å¼ï¼ˆè½»èŠ‚ç‚¹/å…¨èŠ‚ç‚¹ï¼‰
	GetChainInfo(ctx context.Context) (*types.ChainInfo, error)

	// GetCurrentHeight è·å–å½“å‰é“¾é«˜åº¦
	//
	// è¿”å›å½“å‰åŒºå—é“¾çš„é«˜åº¦ï¼ˆæœ€æ–°åŒºå—çš„é«˜åº¦ï¼‰ã€‚
	GetCurrentHeight(ctx context.Context) (uint64, error)

	// GetBestBlockHash è·å–æœ€ä½³åŒºå—å“ˆå¸Œ
	//
	// è¿”å›å½“å‰æœ€ä½³ï¼ˆæœ€æ–°ï¼‰åŒºå—çš„å“ˆå¸Œå€¼ã€‚
	GetBestBlockHash(ctx context.Context) ([]byte, error)

	// GetNodeMode è·å–èŠ‚ç‚¹æ¨¡å¼
	//
	// è¿”å›èŠ‚ç‚¹çš„è¿è¡Œæ¨¡å¼ï¼ˆLight/Fullï¼‰ã€‚
	GetNodeMode(ctx context.Context) (types.NodeMode, error)

	// IsDataFresh æ£€æŸ¥æ•°æ®æ–°é²œåº¦
	//
	// æ£€æŸ¥æœ¬åœ°æ•°æ®æ˜¯å¦ä¸ç½‘ç»œä¿æŒåŒæ­¥ã€‚
	// è¿”å› true è¡¨ç¤ºæ•°æ®æ˜¯æœ€æ–°çš„ï¼Œfalse è¡¨ç¤ºæ­£åœ¨åŒæ­¥ä¸­ã€‚
	IsDataFresh(ctx context.Context) (bool, error)

	// IsReady æ£€æŸ¥ç³»ç»Ÿå°±ç»ªçŠ¶æ€
	//
	// æ£€æŸ¥åŒºå—é“¾ç³»ç»Ÿæ˜¯å¦å®Œå…¨å°±ç»ªå¯ç”¨ã€‚
	// è¿”å› true è¡¨ç¤ºç³»ç»Ÿå°±ç»ªï¼Œfalse è¡¨ç¤ºç³»ç»Ÿæœªå°±ç»ªã€‚
	IsReady(ctx context.Context) (bool, error)

	// GetSyncStatus è·å–åŒæ­¥çŠ¶æ€
	//
	// âš ï¸ **å·²åºŸå¼ƒ**ï¼šåŒæ­¥çŠ¶æ€ä¸å†æŒä¹…åŒ–ï¼Œæ­¤æ–¹æ³•ä»…è¿”å›åŸºæœ¬çŠ¶æ€ä¿¡æ¯ã€‚
	// å¦‚éœ€å®Œæ•´çš„åŒæ­¥çŠ¶æ€ï¼ˆåŒ…æ‹¬ç½‘ç»œé«˜åº¦ã€åŒæ­¥è¿›åº¦ç­‰ï¼‰ï¼Œè¯·ä½¿ç”¨ `chain.SystemSyncService.CheckSync()`ã€‚
	//
	// æŸ¥è¯¢å½“å‰åŒæ­¥çŠ¶æ€ï¼ŒåŒ…æ‹¬ï¼š
	// - æœ¬åœ°é“¾é«˜åº¦
	// - ç½‘ç»œé«˜åº¦ï¼ˆå¯é€‰ï¼Œéœ€è¦é€šè¿‡NetworkæŸ¥è¯¢ï¼‰
	// - åŒæ­¥è¿›åº¦
	// - åŒæ­¥çŠ¶æ€ï¼ˆidle/syncing/synced/errorï¼‰
	//
	// è¿”å›ï¼š
	//   - *types.SystemSyncStatus: åŒæ­¥çŠ¶æ€ä¿¡æ¯ï¼ˆä»…åŒ…å«æœ¬åœ°é«˜åº¦ï¼Œç½‘ç»œé«˜åº¦å’Œè¿›åº¦éœ€è¦é€šè¿‡SystemSyncServiceæŸ¥è¯¢ï¼‰
	//   - error: æŸ¥è¯¢é”™è¯¯
	//
	// Deprecated: ä½¿ç”¨ chain.SystemSyncService.CheckSync() æ›¿ä»£
	GetSyncStatus(ctx context.Context) (*types.SystemSyncStatus, error)
}

// BlockQuery åŒºå—æŸ¥è¯¢æ¥å£ï¼ˆQueryService çš„ç»„æˆéƒ¨åˆ†ï¼‰
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// æä¾›åŒºå—æŸ¥è¯¢æ“ä½œï¼Œä½œä¸º QueryService çš„ä¸€éƒ¨åˆ†ã€‚
//
// ğŸ’¡ **è®¾è®¡ç†å¿µ**ï¼š
// - åªåŒ…å«æŸ¥è¯¢æ“ä½œï¼Œä¸åŒ…å«å†™æ“ä½œ
// - ä½œä¸º QueryService çš„ç»„åˆæ¥å£
// - æä¾›é¢†åŸŸç‰¹å®šçš„æŸ¥è¯¢æ–¹æ³•
//
// ğŸ“ **è°ƒç”¨æ–¹**ï¼š
// - é€šè¿‡ QueryService è°ƒç”¨
// - æ‰€æœ‰éœ€è¦æŸ¥è¯¢åŒºå—ä¿¡æ¯çš„ç»„ä»¶
type BlockQuery interface {
	// GetBlockByHeight æŒ‰é«˜åº¦è·å–åŒºå—
	//
	// æ ¹æ®åŒºå—é«˜åº¦è·å–å®Œæ•´çš„åŒºå—æ•°æ®ã€‚
	GetBlockByHeight(ctx context.Context, height uint64) (*core.Block, error)

	// GetBlockByHash æŒ‰å“ˆå¸Œè·å–åŒºå—
	//
	// æ ¹æ®åŒºå—å“ˆå¸Œè·å–å®Œæ•´çš„åŒºå—æ•°æ®ã€‚
	GetBlockByHash(ctx context.Context, blockHash []byte) (*core.Block, error)

	// GetBlockHeader è·å–åŒºå—å¤´
	//
	// æ ¹æ®åŒºå—å“ˆå¸Œè·å–åŒºå—å¤´ä¿¡æ¯ï¼ˆä¸åŒ…å«äº¤æ˜“åˆ—è¡¨ï¼‰ã€‚
	GetBlockHeader(ctx context.Context, blockHash []byte) (*core.BlockHeader, error)

	// GetBlockRange è·å–åŒºå—èŒƒå›´
	//
	// è·å–æŒ‡å®šé«˜åº¦èŒƒå›´å†…çš„æ‰€æœ‰åŒºå—ã€‚
	// å‚æ•° startHeight å’Œ endHeight éƒ½åŒ…å«åœ¨å†…ã€‚
	GetBlockRange(ctx context.Context, startHeight, endHeight uint64) ([]*core.Block, error)

	// GetHighestBlock è·å–æœ€é«˜åŒºå—ä¿¡æ¯
	//
	// è¿”å›å½“å‰æœ€é«˜åŒºå—çš„é«˜åº¦å’Œå“ˆå¸Œã€‚
	GetHighestBlock(ctx context.Context) (height uint64, blockHash []byte, err error)
}

// TxQuery äº¤æ˜“æŸ¥è¯¢æ¥å£ï¼ˆQueryService çš„ç»„æˆéƒ¨åˆ†ï¼‰
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// æä¾›äº¤æ˜“æŸ¥è¯¢æ“ä½œï¼Œä½œä¸º QueryService çš„ä¸€éƒ¨åˆ†ã€‚
//
// ğŸ’¡ **è®¾è®¡ç†å¿µ**ï¼š
// - åªåŒ…å«æŸ¥è¯¢æ“ä½œï¼Œä¸åŒ…å«å†™æ“ä½œ
// - ä½œä¸º QueryService çš„ç»„åˆæ¥å£
// - æä¾›é¢†åŸŸç‰¹å®šçš„æŸ¥è¯¢æ–¹æ³•
//
// ğŸ“ **è°ƒç”¨æ–¹**ï¼š
// - é€šè¿‡ QueryService è°ƒç”¨
// - æ‰€æœ‰éœ€è¦æŸ¥è¯¢äº¤æ˜“ä¿¡æ¯çš„ç»„ä»¶
type TxQuery interface {
	// GetTransaction æ ¹æ®äº¤æ˜“å“ˆå¸Œè·å–å®Œæ•´äº¤æ˜“åŠå…¶ä½ç½®ä¿¡æ¯
	//
	// è¿”å›å®Œæ•´äº¤æ˜“å¯¹è±¡ï¼Œä»¥åŠäº¤æ˜“æ‰€åœ¨çš„åŒºå—å“ˆå¸Œå’Œäº¤æ˜“ç´¢å¼•ã€‚
	GetTransaction(ctx context.Context, txHash []byte) (blockHash []byte, txIndex uint32, transaction *transaction.Transaction, err error)

	// GetTxBlockHeight è·å–äº¤æ˜“æ‰€åœ¨çš„åŒºå—é«˜åº¦
	//
	// æ ¹æ®äº¤æ˜“å“ˆå¸ŒæŸ¥æ‰¾äº¤æ˜“æ‰€åœ¨çš„åŒºå—é«˜åº¦ã€‚
	GetTxBlockHeight(ctx context.Context, txHash []byte) (uint64, error)

	// GetBlockTimestamp è·å–æŒ‡å®šé«˜åº¦çš„åŒºå—æ—¶é—´æˆ³
	//
	// è¿”å›æŒ‡å®šé«˜åº¦åŒºå—çš„æ—¶é—´æˆ³ã€‚
	GetBlockTimestamp(ctx context.Context, height uint64) (int64, error)

	// GetAccountNonce è·å–è´¦æˆ·å½“å‰nonce
	//
	// è¿”å›æŒ‡å®šåœ°å€çš„å½“å‰ nonce å€¼ã€‚
	GetAccountNonce(ctx context.Context, address []byte) (uint64, error)

	// GetTransactionsByBlock è·å–åŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
	//
	// è¿”å›æŒ‡å®šåŒºå—ä¸­åŒ…å«çš„æ‰€æœ‰äº¤æ˜“åˆ—è¡¨ã€‚
	GetTransactionsByBlock(ctx context.Context, blockHash []byte) ([]*transaction.Transaction, error)
}

// UTXOQuery EUTXOæŸ¥è¯¢æ¥å£ï¼ˆQueryService çš„ç»„æˆéƒ¨åˆ†ï¼‰
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// æä¾› EUTXO æŸ¥è¯¢æ“ä½œï¼Œä½œä¸º QueryService çš„ä¸€éƒ¨åˆ†ã€‚
//
// ğŸ’¡ **è®¾è®¡ç†å¿µ**ï¼š
// - åªåŒ…å«æŸ¥è¯¢æ“ä½œï¼Œä¸åŒ…å«å†™æ“ä½œ
// - ä½œä¸º QueryService çš„ç»„åˆæ¥å£
// - æä¾›é¢†åŸŸç‰¹å®šçš„æŸ¥è¯¢æ–¹æ³•
//
// ğŸ“ **è°ƒç”¨æ–¹**ï¼š
// - é€šè¿‡ QueryService è°ƒç”¨
// - æ‰€æœ‰éœ€è¦æŸ¥è¯¢ UTXO ä¿¡æ¯çš„ç»„ä»¶
type UTXOQuery interface {
	// GetUTXO æ ¹æ®OutPointç²¾ç¡®è·å–UTXO
	//
	// æ ¹æ®äº¤æ˜“å“ˆå¸Œå’Œè¾“å‡ºç´¢å¼•è·å– UTXOã€‚
	GetUTXO(ctx context.Context, outpoint *transaction.OutPoint) (*utxo.UTXO, error)

	// GetUTXOsByAddress è·å–åœ°å€æ‹¥æœ‰çš„UTXOåˆ—è¡¨
	//
	// è¿”å›æŒ‡å®šåœ°å€æ‹¥æœ‰çš„æ‰€æœ‰ UTXOã€‚
	// å‚æ•°ï¼š
	//   - address: æ‰€æœ‰è€…åœ°å€
	//   - category: UTXOç±»å‹è¿‡æ»¤ï¼ˆnilè¡¨ç¤ºæ‰€æœ‰ç±»å‹ï¼‰
	//   - onlyAvailable: æ˜¯å¦åªè¿”å›å¯ç”¨çŠ¶æ€çš„UTXO
	GetUTXOsByAddress(ctx context.Context, address []byte, category *utxo.UTXOCategory, onlyAvailable bool) ([]*utxo.UTXO, error)

	// GetSponsorPoolUTXOs è·å–èµåŠ©æ± UTXOåˆ—è¡¨
	//
	// è¿”å›æ‰€æœ‰èµåŠ©æ±  UTXOï¼ˆå…·æœ‰ç‰¹æ®ŠOwneråœ°å€çš„UTXOï¼‰ã€‚
	// å‚æ•°ï¼š
	//   - onlyAvailable: æ˜¯å¦åªè¿”å›å¯ç”¨çŠ¶æ€çš„UTXO
	GetSponsorPoolUTXOs(ctx context.Context, onlyAvailable bool) ([]*utxo.UTXO, error)

	// GetCurrentStateRoot è·å–å½“å‰UTXOçŠ¶æ€æ ¹
	//
	// è¿”å›å½“å‰ UTXO é›†åˆçš„çŠ¶æ€æ ¹å“ˆå¸Œã€‚
	GetCurrentStateRoot(ctx context.Context) ([]byte, error)
}

// ResourceQuery èµ„æºæŸ¥è¯¢æ¥å£ï¼ˆQueryService çš„ç»„æˆéƒ¨åˆ†ï¼‰
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// æä¾›èµ„æºæŸ¥è¯¢æ“ä½œï¼Œä½œä¸º QueryService çš„ä¸€éƒ¨åˆ†ã€‚
//
// ğŸ’¡ **è®¾è®¡ç†å¿µ**ï¼š
// - åªåŒ…å«æŸ¥è¯¢æ“ä½œï¼Œä¸åŒ…å«å†™æ“ä½œ
// - ä½œä¸º QueryService çš„ç»„åˆæ¥å£
// - æä¾›é¢†åŸŸç‰¹å®šçš„æŸ¥è¯¢æ–¹æ³•
//
// ğŸ“ **è°ƒç”¨æ–¹**ï¼š
// - é€šè¿‡ QueryService è°ƒç”¨
// - æ‰€æœ‰éœ€è¦æŸ¥è¯¢èµ„æºä¿¡æ¯çš„ç»„ä»¶
type ResourceQuery interface {
	// GetResourceByContentHash æ ¹æ®å†…å®¹å“ˆå¸ŒæŸ¥è¯¢å®Œæ•´èµ„æº
	//
	// æ ¹æ®å†…å®¹å“ˆå¸Œè·å–å®Œæ•´çš„èµ„æºå¯¹è±¡ã€‚
	GetResourceByContentHash(ctx context.Context, contentHash []byte) (*pb_resource.Resource, error)

	// GetResourceFromBlockchain ä»åŒºå—é“¾è·å–èµ„æºå…ƒä¿¡æ¯
	//
	// ä»åŒºå—é“¾æŸ¥è¯¢èµ„æºå…ƒä¿¡æ¯ã€‚
	// è¿”å›èµ„æºå¯¹è±¡å’Œæ˜¯å¦å­˜åœ¨æ ‡å¿—ã€‚
	GetResourceFromBlockchain(ctx context.Context, contentHash []byte) (*pb_resource.Resource, bool, error)

	// GetResourceTransaction è·å–èµ„æºå…³è”çš„äº¤æ˜“ä¿¡æ¯
	//
	// è¿”å›èµ„æºå…³è”çš„äº¤æ˜“å“ˆå¸Œã€åŒºå—å“ˆå¸Œå’ŒåŒºå—é«˜åº¦ã€‚
	GetResourceTransaction(ctx context.Context, contentHash []byte) (txHash, blockHash []byte, blockHeight uint64, err error)

	// CheckFileExists æ£€æŸ¥æœ¬åœ°æ–‡ä»¶æ˜¯å¦å­˜åœ¨
	//
	// æ£€æŸ¥æŒ‡å®šå†…å®¹å“ˆå¸Œçš„èµ„æºæ–‡ä»¶æ˜¯å¦å­˜åœ¨äºæœ¬åœ°æ–‡ä»¶ç³»ç»Ÿã€‚
	CheckFileExists(contentHash []byte) bool

	// BuildFilePath æ„å»ºæœ¬åœ°æ–‡ä»¶è·¯å¾„
	//
	// æ ¹æ®å†…å®¹å“ˆå¸Œæ„å»ºèµ„æºæ–‡ä»¶çš„æœ¬åœ°å­˜å‚¨è·¯å¾„ã€‚
	BuildFilePath(contentHash []byte) string

	// ListResourceHashes åˆ—å‡ºæ‰€æœ‰èµ„æºå“ˆå¸Œ
	//
	// è¿”å›æ‰€æœ‰èµ„æºçš„å“ˆå¸Œåˆ—è¡¨ã€‚
	// å‚æ•°ï¼š
	//   - offset: åç§»é‡
	//   - limit: è¿”å›æ•°é‡é™åˆ¶
	ListResourceHashes(ctx context.Context, offset int, limit int) ([][]byte, error)
}

// AccountQuery è´¦æˆ·æŸ¥è¯¢æ¥å£ï¼ˆQueryService çš„ç»„æˆéƒ¨åˆ†ï¼‰
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// æä¾›è´¦æˆ·æŸ¥è¯¢æ“ä½œï¼Œä½œä¸º QueryService çš„ä¸€éƒ¨åˆ†ã€‚
//
// ğŸ’¡ **è®¾è®¡ç†å¿µ**ï¼š
// - åªåŒ…å«æŸ¥è¯¢æ“ä½œï¼Œä¸åŒ…å«å†™æ“ä½œ
// - ä½œä¸º QueryService çš„ç»„åˆæ¥å£
// - æä¾›è´¦æˆ·çº§åˆ«çš„èšåˆè§†å›¾ï¼ˆéšè—UTXOç»†èŠ‚ï¼‰
//
// ğŸ“ **è°ƒç”¨æ–¹**ï¼š
// - é€šè¿‡ QueryService è°ƒç”¨
// - æ‰€æœ‰éœ€è¦æŸ¥è¯¢è´¦æˆ·ä¿¡æ¯çš„ç»„ä»¶
type AccountQuery interface {
	// GetAccountBalance è·å–è´¦æˆ·ä½™é¢ï¼ˆèšåˆè§†å›¾ï¼‰
	//
	// è¿”å›æŒ‡å®šåœ°å€çš„è´¦æˆ·ä½™é¢ï¼ˆèšåˆæ‰€æœ‰ UTXO çš„ä½™é¢ï¼‰ã€‚
	// å‚æ•°ï¼š
	//   - address: è´¦æˆ·åœ°å€
	//   - tokenID: ä»£å¸IDï¼ˆnilè¡¨ç¤ºåŸç”Ÿä»£å¸ï¼‰
	GetAccountBalance(ctx context.Context, address []byte, tokenID []byte) (*types.BalanceInfo, error)
}

// PricingQuery å®šä»·æŸ¥è¯¢æ¥å£ï¼ˆQueryService çš„ç»„æˆéƒ¨åˆ†ï¼‰
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// æä¾›èµ„æºå®šä»·çŠ¶æ€çš„æŸ¥è¯¢æ“ä½œï¼Œä½œä¸º QueryService çš„ä¸€éƒ¨åˆ†ã€‚
//
// ğŸ’¡ **è®¾è®¡ç†å¿µ**ï¼š
// - åªåŒ…å«æŸ¥è¯¢æ“ä½œï¼Œä¸åŒ…å«å†™æ“ä½œ
// - ä½œä¸º QueryService çš„ç»„åˆæ¥å£
// - æä¾›é¢†åŸŸç‰¹å®šçš„æŸ¥è¯¢æ–¹æ³•
//
// ğŸ“ **è°ƒç”¨æ–¹**ï¼š
// - é€šè¿‡ QueryService è°ƒç”¨
// - æ‰€æœ‰éœ€è¦æŸ¥è¯¢èµ„æºå®šä»·ä¿¡æ¯çš„ç»„ä»¶
type PricingQuery interface {
	// GetPricingState æ ¹æ®èµ„æºå“ˆå¸ŒæŸ¥è¯¢å®šä»·çŠ¶æ€
	//
	// æ ¹æ®èµ„æºå†…å®¹å“ˆå¸Œè·å–èµ„æºçš„å®šä»·çŠ¶æ€å¯¹è±¡ã€‚
	// è¿”å› ResourcePricingState å¯¹è±¡ã€‚
	GetPricingState(ctx context.Context, resourceHash []byte) (*types.ResourcePricingState, error)
}

